--- a/augmented-reality.html
+++ b/augmented-reality.html
@@ -49,9 +49,10 @@
 
 <body>
     <!-- Back to top button -->
-    <img class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50px"
-        src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/chevron-up-circle-outline_jfaz33.svg"
-        alt="back to top icon">
+    <svg class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50" height="50" viewBox="0 0 512 512">
+        <path
+            d="M256 48C141.13 48 48 141.13 48 256s93.13 208 208 208 208-93.13 208-208S370.87 48 256 48zm80 280l-80-80-80 80-16-16 96-96 96 96z" />
+    </svg>
 
     <!--- Start of Navbar -->
 
@@ -83,6 +84,7 @@
                 </li>
 
             </ul>
+
             <div class="menu">
                 <div class="menu-line1"></div>
                 <div class="menu-line2"></div>
@@ -108,8 +110,8 @@
 
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-twitter_bzblkx.svg"
+                <img class="extra-icon-image twitter"
+                    src="https://res.cloudinary.com/dhvalxorx/image/upload/v1735493760/Neec%20-%20Nonso/7740647_srug84.webp"
                     alt='extra-icon-image' />
             </a>
 
@@ -131,7 +133,8 @@
 
             <div class="video-card">
 
-                <iframe src="https://www.youtube-nocookie.com/embed/EdH92S5FRXE?autoplay=1&controls=1&loop=1&mute=1"
+                <iframe
+                    src="https://www.youtube-nocookie.com/embed/EdH92S5FRXE?rel=0&autoplay=1&modestbranding=1&controls=1"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen>
@@ -144,7 +147,8 @@
 
             <div class="video-card">
 
-                <iframe src="https://www.youtube.com/embed/SCQeYM4UUVw?autoplay=1&controls=1&loop=1&mute=1"
+                <iframe
+                    src="https://www.youtube.com/embed/SCQeYM4UUVw?rel=0&autoplay=1&modestbranding=1&controls=1&mute=1"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen>
@@ -157,7 +161,8 @@
 
             <div class="video-card">
 
-                <iframe src="https://www.youtube.com/embed/PqaLVRLGMmU?autoplay=1&controls=1&loop=1&mute=1"
+                <iframe
+                    src="https://www.youtube.com/embed/PqaLVRLGMmU?rel=0&autoplay=1&modestbranding=1&controls=1&mute=1"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen>
@@ -170,8 +175,9 @@
 
             <div class="video-card">
 
-                <iframe src="https://www.youtube.com/embed/rxeBbI0qsNA?autoplay=1&controls=1&loop=1&mute=1"
-                    frameborder="0"
+                <iframe
+                    src="https://www.youtube.com/embed/rxeBbI0qsNA?rel=0&autoplay=1&modestbranding=1&controls=1&loop=1&mute=1"
+                    title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen>
                 </iframe>
