--- a/contact.html
+++ b/contact.html
@@ -47,9 +47,10 @@
 <body>
 
     <!-- Back to top button -->
-    <img class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50px"
-        src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/chevron-up-circle-outline_jfaz33.svg"
-        alt="back to top icon">
+    <svg class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50" height="50" viewBox="0 0 512 512">
+        <path
+            d="M256 48C141.13 48 48 141.13 48 256s93.13 208 208 208 208-93.13 208-208S370.87 48 256 48zm80 280l-80-80-80 80-16-16 96-96 96 96z" />
+    </svg>
 
     <!--- Start of Navbar -->
 
@@ -106,8 +107,8 @@
 
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-twitter_bzblkx.svg"
+                <img class="extra-icon-image twitter"
+                    src="https://res.cloudinary.com/dhvalxorx/image/upload/v1735493760/Neec%20-%20Nonso/7740647_srug84.webp"
                     alt='extra-icon-image' />
             </a>
 
@@ -143,12 +144,16 @@
 
                     </p>
                     <br><br>
+
+                    <!-- 
                     <p class="contact-words-gallery-title">gallery</p>
                     <p class="contact-words-gallery-name">rele gallery</p>
                     <p>32 thompson avenue ikoyi, <br>lagos, <br> nigeria.</p>
                     <a rel='noreferrer noopener' target='_blank' class="email-contact"
                         href="https://www.rele.co/">www.rele.co
                     </a>
+
+                    -->
 
                 </div>
 
