--- a/exhibition.html
+++ b/exhibition.html
@@ -50,9 +50,10 @@
 
 <body>
     <!-- Back to top button -->
-    <img class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50px"
-        src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/chevron-up-circle-outline_jfaz33.svg"
-        alt="back to top icon">
+    <svg class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50" height="50" viewBox="0 0 512 512">
+        <path
+            d="M256 48C141.13 48 48 141.13 48 256s93.13 208 208 208 208-93.13 208-208S370.87 48 256 48zm80 280l-80-80-80 80-16-16 96-96 96 96z" />
+    </svg>
 
     <!--- Start of Navbar -->
 
@@ -109,8 +110,8 @@
 
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-twitter_bzblkx.svg"
+                <img class="extra-icon-image twitter"
+                    src="https://res.cloudinary.com/dhvalxorx/image/upload/v1735493760/Neec%20-%20Nonso/7740647_srug84.webp"
                     alt='extra-icon-image' />
             </a>
 
@@ -126,60 +127,137 @@
 
     <div class="exhibitions-info">
 
-        <div class="">
 
-            <p class="exhibition-year">2022</p>
+        <div class="2024">
+
+            <p class="exhibition-year">2024</p>
 
             <section class="exhibitions">
-                <p class="exhibition-title"><a href="./exhibitions/wanawari">wa na wari</a> </p>
-                <p class="exhibition-venue"> wa na wari art space</p>
-                <p class="exhibition-location">seatle,usa</p>
+                <p class="exhibition-title"> <a href="./exhibitions/2024/the-architecture-of-liberation">
+                        the architecture of <br> liberation</a>
+                </p>
+                <p class="exhibition-venue">prizm art fair, <br> ice palace west studio</p>
+                <p class="exhibition-location">miami, usa</p>
+
             </section>
 
             <section class="exhibitions">
-                <p class="exhibition-title"> <a href="./exhibitions/youngcontemporaries">young contemporaries</a>
+                <p class="exhibition-title"><a href="./exhibitions/2024/africa-foto-fair.html">africa foto fair</a>
                 </p>
-                <p class="exhibition-venue">rele arts foundation </p>
+                <p class="exhibition-venue">musée des cultures <br> contemporainesadama toungara,</p>
+                <p>
+
+                    abidjan, côte d_ivoire
+                </p>
+            </section>
+
+            <section class="exhibitions">
+                <p class="exhibition-title"> <a href="./exhibitions/2024/kedu-lagos.html">
+                        kedu lagos,<br> goethe-institut</a>
+                </p>
+                <p class="exhibition-venue">old government printing press,</p>
                 <p class="exhibition-location">lagos,nigeria</p>
 
             </section>
 
             <section class="exhibitions">
-                <p class="exhibition-title"> <a href="./exhibitions/4000-daily">4000 daily</a>
+                <p class="exhibition-title"><a href="./exhibitions/2024/what’s-in-a-name">what’s in a name</a></a>
                 </p>
-                <p class="exhibition-venue">kunsthaus göttingen </p>
-                <p class="exhibition-location">germany</p>
-            </section>
-
-
-            <section class="exhibitions">
-                <p class="exhibition-title"> <a href="./exhibitions/good-things-come-in-threes">good things come in
-                        threes</a>
-                </p>
-                <p class="exhibition-venue">rele gallery </p>
+                <p class="exhibition-venue">rele gallery,</p>
                 <p class="exhibition-location">los angeles, usa</p>
             </section>
 
+        </div>
 
+        <div class="2023">
+
+            <p class="exhibition-year">2023</p>
 
             <section class="exhibitions">
-                <p class="exhibition-title"> <a href="./exhibitions/in-a-pot-of-hot-soup">in a pot of hot soup</a>
+                <p class="exhibition-title"><a href="./exhibitions/2023/centro-de-explicação"> centro de explicação,
+                        <br> prédio abandonado,
+                    </a>
                 </p>
-                <p class="exhibition-venue">brunei gallery soas </p>
-                <p class="exhibition-location">london, uk</p>
+                <p class="exhibition-venue">maputo,</p>
+                <p class="exhibition-location">mozambique</p>
+
             </section>
 
+            <section class="exhibitions">
 
+                <p class="exhibition-title"><a href="./exhibitions/2023/paris-photo-walter_s-cube"> paris photo,
+                        walter_s cube, </a>
+                </p>
+                <p class="exhibition-venue">parisphoto.onlineviewingroom.com</p>
+                <p class="exhibition-location"></p>
+
+            </section>
 
             <section class="exhibitions">
-                <p class="exhibition-title"> <a href="./exhibitions/vantage-point">vantage point,sharjah 10</a>
+                <p class="exhibition-title"><a href="./exhibitions/2023/bringing-the-world-to-africa">bringing the world
+                        to africa and taking
+                        africa to the world through images </a>
+                </p>
+                <p class="exhibition-venue">africa foto fair,</p>
+                <p class="exhibition-location">abidjan, côte d_ivoire</p>
+
+            </section>
+
+            <section class="exhibitions">
+
+                <p class="exhibition-title"><a href="./exhibitions/2023/organized-mischief"> organized mischief,</a>
+                </p>
+                <p class="exhibition-venue">center on contemporary arts (coca),</p>
+                <p class="exhibition-location">seattle, usa</p>
+
+            </section>
+
+            <section class="exhibitions">
+
+                <p class="exhibition-title"><a href="./exhibitions/2023/regenerate-society">regenerate society, </a>
+                </p>
+                <p class="exhibition-venue">noorderlicht internationaal fotofestival,</p>
+                <p class="exhibition-location">groningen, netherlands</p>
+
+            </section>
+
+        </div>
+
+        <div class="2022">
+
+            <p class="exhibition-year">2022</p>
+
+            <section class="exhibitions">
+                <p class="exhibition-title"> <a href="./exhibitions/2022/the-world-today-10k+">the world today
+                        10k+</a>
+                </p>
+                <p class="exhibition-venue">metaverse </p>
+                <p><a class="exhibition-location link" target="_blank" rel="noreferrer noopener"
+                        href="https://www.oncyber.io/theworldtoday">
+                        www.oncyber.io/theworldtoday
+                    </a></p>
+
+            </section>
+
+            <section class="exhibitions">
+                <p class="exhibition-title"> <a href="./exhibitions/2022/cosmos-of-space-place-andtime.html">cosmos of
+                        space, <br> place, and
+                        time</a>
+                </p>
+                <p class="exhibition-venue">nlele institute offsite, </p>
+                <p class="exhibition-location">rencontres de bamako, mali</p>
+            </section>
+
+            <section class="exhibitions">
+                <p class="exhibition-title"> <a href="./exhibitions/2022/vantage-point.html">vantage point,sharjah
+                        10</a>
                 </p>
                 <p class="exhibition-venue">sharjah art foundation,</p>
                 <p class="exhibition-location">united arab emirates</p>
             </section>
 
             <section class="exhibitions">
-                <p class="exhibition-title"> <a href="./exhibitions/transcendental-signified">transcendental
+                <p class="exhibition-title"> <a href="./exhibitions/2022/transcendental-signified">transcendental
                         signified</a>
                 </p>
                 <p class="exhibition-venue">rele gallery,</p>
@@ -187,41 +265,51 @@
             </section>
 
             <section class="exhibitions">
-                <p class="exhibition-title"> <a href="./exhibitions/the-world-today-10k+">the world today
-                        10k+</a>
+                <p class="exhibition-title"> <a href="./exhibitions/2022/good-things-come-in-threes">good things come in
+                        threes</a>
                 </p>
-                <p class="exhibition-venue">metaverse </p>
-                <a class="exhibition-location link" target="_blank" rel="noreferrer"
-                    href="https://www.oncyber.io/theworldtoday">
-                    www.oncyber.io/theworldtoday
-                </a>
+                <p class="exhibition-venue">rele gallery </p>
+                <p class="exhibition-location">los angeles, usa</p>
+            </section>
+
+            <section class="exhibitions">
+                <p class="exhibition-title"> <a href="./exhibitions/2022/in-a-pot-of-hot-soup.html">in a pot of hot
+                        soup</a>
+                </p>
+                <p class="exhibition-venue">brunei gallery soas </p>
+                <p class="exhibition-location">london, uk</p>
+            </section>
+
+            <section class="exhibitions">
+                <p class="exhibition-title"> <a href="./exhibitions/2022/4000-daily.html">4000 daily</a>
+                </p>
+                <p class="exhibition-venue">kunsthaus göttingen </p>
+                <p class="exhibition-location">germany</p>
+            </section>
+
+            <section class="exhibitions">
+                <p class="exhibition-title"><a href="./exhibitions/2022/wanawari.html">wa na wari</a> </p>
+                <p class="exhibition-venue"> wa na wari art space</p>
+                <p class="exhibition-location">seatle,usa</p>
+            </section>
+
+            <section class="exhibitions">
+                <p class="exhibition-title"> <a href="./exhibitions/2022/youngcontemporaries">young contemporaries</a>
+                </p>
+                <p class="exhibition-venue">rele arts foundation </p>
+                <p class="exhibition-location">lagos,nigeria</p>
 
             </section>
 
         </div>
 
-        <div class="">
+        <div class="2021">
 
             <p class="exhibition-year">2021</p>
 
             <section class="exhibitions">
-                <p class="exhibition-title">
-                    <a href="./exhibitions/taste-mystique"> taste:mystique <br> smithsonian</a>
-                </p>
-                <p class="exhibition-venue">lagos photo festival,</p>
-                <p class="exhibition-location">lagos,nigeria</p>
-            </section>
-
-            <section class="exhibitions">
-                <p class="exhibition-title"><a href="./exhibitions/boundariesofreason">boundaries of
-                        reason,</a>
-                </p>
-                <p class="exhibition-venue">abuja photo festival,</p>
-                <p class="exhibition-location">abuja,nigeria</p>
-            </section>
-
-            <section class="exhibitions">
-                <p class="exhibition-title"><a href="./exhibitions/no-victor-no-vanquished:theworldatthecrossroads">
+                <p class="exhibition-title"><a
+                        href="./exhibitions/2021/no-victor-no-vanquished:theworldatthecrossroads">
                         no victor,no vanquished:<br>
                         the world at <br> the crossroads.</a></p>
                 <p class="exhibition-venue">iwaya community art biennale,</p>
@@ -229,7 +317,23 @@
             </section>
 
             <section class="exhibitions">
-                <p class="exhibition-title"><a href="./exhibitions/youngphotographers">young
+                <p class="exhibition-title">
+                    <a href="./exhibitions/2021/taste-mystique"> taste:mystique <br> smithsonian</a>
+                </p>
+                <p class="exhibition-venue">lagos photo festival,</p>
+                <p class="exhibition-location">lagos,nigeria</p>
+            </section>
+
+            <section class="exhibitions">
+                <p class="exhibition-title"><a href="./exhibitions/2021/boundariesofreason">boundaries of
+                        reason,</a>
+                </p>
+                <p class="exhibition-venue">abuja photo festival,</p>
+                <p class="exhibition-location">abuja,nigeria</p>
+            </section>
+
+            <section class="exhibitions">
+                <p class="exhibition-title"><a href="./exhibitions/2021/youngphotographers">young
                         photographers</a>
                 </p>
                 <p class="exhibition-venue">alliance francaise,</p>
@@ -238,16 +342,7 @@
             </section>
 
             <section class="exhibitions">
-                <p class="exhibition-title"><a href="./exhibitions/agathering">a
-                        gathering</a>
-                </p>
-                <p class="exhibition-venue">ikollo gallery,</p>
-                <p class="exhibition-location">lagos, nigeria.</p>
-
-            </section>
-
-            <section class="exhibitions">
-                <p class="exhibition-title"> <a href="./exhibitions/relebootcampexhibition">rele
+                <p class="exhibition-title"> <a href="./exhibitions/2021/relebootcampexhibition">rele
                         boot
                         camp
                         <br>
@@ -257,15 +352,24 @@
                 <p class="exhibition-location">lagos,nigeria</p>
 
             </section>
+            '
+            <section class="exhibitions">
+                <p class="exhibition-title"><a href="./exhibitions/2021/agathering">a
+                        gathering</a>
+                </p>
+                <p class="exhibition-venue">ikollo gallery,</p>
+                <p class="exhibition-location">lagos, nigeria.</p>
+
+            </section>
 
         </div>
 
-        <div class="">
+        <div class="2020">
 
             <p class="exhibition-year">2020</p>
 
             <section class="exhibitions">
-                <p class="exhibition-title"> <a href="./exhibitions/nigeria-trending-lagos-fringe">
+                <p class="exhibition-title"> <a href="./exhibitions/2020/nigeria-trending-lagos-fringe">
                         nigeria trending, <br> lagos fringe</a>
                 </p>
                 <p class="exhibition-venue">freedom park, <br> kongi`s harvest gallery,</p>
@@ -274,34 +378,17 @@
             </section>
 
 
-            <section class="exhibitions">
-                <p class="exhibition-title">pain: a
-                    discomfort or <br> a
-                    trigger</a>
-                </p>
-                <p class="exhibition-venue">virtual exhibition,</p>
-                <a class="exhibition-location link" target="_blank" rel="noreferrer"
-                    href="https://thepeaceexhibit.com/exhibitor/neec-nonso-pain-a-discomfort-or-a-trigger/">
-                    thepeaceexhibit.com
-                </a>
-            </section>
+
 
         </div>
 
-        <div class="">
+        <div class="2019">
 
             <p class="exhibition-year">2019</p>
 
             <section class="exhibitions">
-                <p class="exhibition-title"><a href="./exhibitions/yanga">yanga.</a></p>
-                <p class="exhibition-venue">african artists foundation,</p>
-                <p class="exhibition-location">lagos, nigeria</p>
 
-            </section>
-
-            <section class="exhibitions">
-
-                <p class="exhibition-title"><a href="./exhibitions/afrofutures">afro
+                <p class="exhibition-title"><a href="./exhibitions/2019/afrofutures">afro
                         futures.</a>
                 </p>
                 <p class="exhibition-venue">kungstgewerber museum,</p>
@@ -310,7 +397,17 @@
 
             </section>
 
+            <section class="exhibitions">
+                <p class="exhibition-title"><a href="./exhibitions/2019/yanga">yanga.</a></p>
+                <p class="exhibition-venue">african artists foundation,</p>
+                <p class="exhibition-location">lagos, nigeria</p>
+
+            </section>
+
+
+
         </div>
+
 
     </div>
 
