--- a/projects.html
+++ b/projects.html
@@ -45,9 +45,10 @@
 
 <body>
     <!-- Back to top button -->
-    <img class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50px"
-        src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/chevron-up-circle-outline_jfaz33.svg"
-        alt="back to top icon">
+    <svg class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50" height="50" viewBox="0 0 512 512">
+        <path
+            d="M256 48C141.13 48 48 141.13 48 256s93.13 208 208 208 208-93.13 208-208S370.87 48 256 48zm80 280l-80-80-80 80-16-16 96-96 96 96z" />
+    </svg>
 
     <!--- Start of Navbar -->
 
@@ -107,8 +108,8 @@
 
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-twitter_bzblkx.svg"
+                <img class="extra-icon-image twitter"
+                    src="https://res.cloudinary.com/dhvalxorx/image/upload/v1735493760/Neec%20-%20Nonso/7740647_srug84.webp"
                     alt='extra-icon-image' />
             </a>
 
@@ -142,24 +143,57 @@
         <div class="card-container">
 
             <div class="card">
-                <a href="./projects/theboysfraternity">
+                <a href="./projects/heads-of-state">
                     <img loading="lazy" class="card-image"
-                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669904111/Projects/the%20boys%20fraternity/mobile/project_ov3xmf.webp"
+                        src="https://res.cloudinary.com/dhvalxorx/image/upload/c_scale,w_550/v1733494977/Neec%20-%20Nonso/Projects/1%20heads%20of%20state%2C%202024/1_commander-in-chief_of_the_cuntry_k3gipi.webp"
                         alt="projects-image">
                 </a>
-                <a class="card-description" href="./projects/theboysfraternity">
-                    <p class="project-title">the boys fraternity.</p>
+                <a class="card-description" href="./projects/head-of-state">
+                    <p class="project-title">heads of state,<span>2024</span></p>
                 </a>
             </div>
 
             <div class="card">
-                <a href="./projects/thelastburial">
+                <a href="./projects/memorium">
                     <img loading="lazy" class="card-image"
-                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669906025/Projects/the%20last%20burial/mobile/1_qcb3ze.webp"
+                        src="https://res.cloudinary.com/dhvalxorx/image/upload/c_scale,w_550/v1733495536/Neec%20-%20Nonso/Projects/2%20memorium%2C%202024/1_ynk3aw.webp"
                         alt="projects-image">
                 </a>
-                <a class="card-description" href="./projects/thelastburial">
-                    <p class="project-title">the last burial.</p>
+                <a class="card-description" href="./projects/memorium">
+                    <p class="project-title">memorium,2024</p>
+                </a>
+            </div>
+
+            <div class="card">
+                <a href="./projects/intheinin">
+                    <img loading="lazy" class="card-image"
+                        src="https://res.cloudinary.com/dhvalxorx/image/upload/c_scale,w_550/v1733494952/Neec%20-%20Nonso/Projects/2b%20in%20the%20in%20in/1_vfdfsw.webp"
+                        alt="projects-image">
+                </a>
+                <a class="card-description" href="./projects/intheinin">
+                    <p class="project-title">in the in in,2024</p>
+                </a>
+            </div>
+
+            <div class="card">
+                <a href="./projects/afamefuna">
+                    <img loading="lazy" class="card-image"
+                        src="https://res.cloudinary.com/dhvalxorx/image/upload/c_scale,w_550/v1733495510/Neec%20-%20Nonso/Projects/3%20afamefuna%202023/the_empty_space_in_the_head_is_very_vast_qxdubw.webp"
+                        alt="projects-image">
+                </a>
+                <a class="card-description" href="./projects/afamefuna">
+                    <p class="project-title">afamefuna,2023</p>
+                </a>
+            </div>
+
+            <div class="card">
+                <a href="./projects/transcendental-signified">
+                    <img loading="lazy" class="card-image"
+                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669904201/Projects/transcendental-signified/mobile/3_ckwjrl.webp"
+                        alt="projects-image">
+                </a>
+                <a class="card-description" href="./projects/transcendental-signified">
+                    <p class="project-title">transcendental signified,2022</p>
                 </a>
             </div>
 
@@ -170,18 +204,40 @@
                         alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/whatwasdeadwasneverdead">
-                    <p class="project-title">what was dead was never dead.</p>
+                    <p class="project-title">what was dead was never dead,2021</p>
                 </a>
             </div>
 
             <div class="card">
-                <a href="./projects/christmasandclothes">
+                <a href="./projects/thelastburial">
                     <img loading="lazy" class="card-image"
-                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669895106/Projects/christmas-and-clothes/mobile/1_kzrq5s.webp"
+                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669906025/Projects/the%20last%20burial/mobile/1_qcb3ze.webp"
                         alt="projects-image">
                 </a>
-                <a class="card-description" href="./projects/christmasandclothes">
-                    <p class="project-title">christmas and clothes.</p>
+                <a class="card-description" href="./projects/thelastburial">
+                    <p class="project-title">the last burial,2021</p>
+                </a>
+            </div>
+
+            <div class="card">
+                <a href="./projects/toiletintoiletout">
+                    <img loading="lazy" class="card-image"
+                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669904148/Projects/toilet%20in%2C%20toilet%20out/mobile/9_cueueb.webp"
+                        alt="projects-image">
+                </a>
+                <a class="card-description" href="./projects/toiletintoiletout">
+                    <p class="project-title">toilet in, toilet out,2020</p>
+                </a>
+            </div>
+
+            <div class="card">
+                <a href="./projects/theanotherbeginning">
+                    <img loading="lazy" class="card-image"
+                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669901305/Projects/the%20another%20beginning/mobile/2_szruv9.webp"
+                        alt="projects-image">
+                </a>
+                <a class="card-description" href="./projects/theanotherbeginning">
+                    <p class="project-title">the another beginning,2020</p>
                 </a>
             </div>
 
@@ -192,9 +248,46 @@
                         alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/howtophotographylagos">
-                    <p class="project-title">how to photograph lagos.</p>
+                    <p class="project-title">how to photograph lagos,2019</p>
                 </a>
             </div>
+
+            <div class="card">
+                <a href="./projects/waitingforchineke">
+                    <img loading="lazy" class="card-image"
+                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669904228/Projects/waiting%20for%20chineke/mobile/2b_etfmdo.webp"
+                        alt="projects-image">
+                </a>
+                <a class="card-description" href="./projects/waitingforchineke">
+                    <p class="project-title">waiting for chineke,2018</p>
+                </a>
+            </div>
+
+            <div class="card">
+                <a href="./projects/theboysfraternity">
+                    <img loading="lazy" class="card-image"
+                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669904111/Projects/the%20boys%20fraternity/mobile/project_ov3xmf.webp"
+                        alt="projects-image">
+                </a>
+                <a class="card-description" href="./projects/theboysfraternity">
+                    <p class="project-title">the boys fraternity,2018</p>
+                </a>
+            </div>
+
+            <div class="card">
+                <a href="./projects/christmasandclothes">
+                    <img loading="lazy" class="card-image"
+                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669895106/Projects/christmas-and-clothes/mobile/1_kzrq5s.webp"
+                        alt="projects-image">
+                </a>
+                <a class="card-description" href="./projects/christmasandclothes">
+                    <p class="project-title">christmas and clothes,2017</p>
+                </a>
+            </div>
+
+
+
+            <!-- 
 
             <div class="card">
                 <a href="./projects/howtophotographylagostwo">
@@ -206,61 +299,15 @@
                     <p class="project-title">how to photograph lagos 2.</p>
                 </a>
             </div>
+-->
 
-            <div class="card">
-                <a href="./projects/theanotherbeginning">
-                    <img loading="lazy" class="card-image"
-                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669901305/Projects/the%20another%20beginning/mobile/2_szruv9.webp"
-                        alt="projects-image">
-                </a>
-                <a class="card-description" href="./projects/theanotherbeginning">
-                    <p class="project-title">the another beginning.</p>
-                </a>
-            </div>
 
-            <div class="card">
-                <a href="./projects/toiletintoiletout">
-                    <img loading="lazy" class="card-image"
-                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669904148/Projects/toilet%20in%2C%20toilet%20out/mobile/9_cueueb.webp"
-                        alt="projects-image">
-                </a>
-                <a class="card-description" href="./projects/toiletintoiletout">
-                    <p class="project-title">toilet in, toilet out.</p>
-                </a>
-            </div>
 
-            <div class="card">
-                <a href="./projects/waitingforchineke">
-                    <img loading="lazy" class="card-image"
-                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669904228/Projects/waiting%20for%20chineke/mobile/2b_etfmdo.webp"
-                        alt="projects-image">
-                </a>
-                <a class="card-description" href="./projects/waitingforchineke">
-                    <p class="project-title">waiting for chineke.</p>
-                </a>
-            </div>
 
-            <div class="card">
-                <a href="./projects/pain-a-discomfort-or-a-trigger">
-                    <img loading="lazy" class="card-image"
-                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669896744/Projects/pain%20a%20discomfort/mobille350px_igyed6.webp"
-                        alt="projects-image">
-                </a>
-                <a class="card-description" href="./projects/pain-a-discomfort-or-a-trigger">
-                    <p class="project-title">pain: a discomfort or a trigger.</p>
-                </a>
-            </div>
 
-            <div class="card">
-                <a href="./projects/transcendental-signified">
-                    <img loading="lazy" class="card-image"
-                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669904201/Projects/transcendental-signified/mobile/3_ckwjrl.webp"
-                        alt="projects-image">
-                </a>
-                <a class="card-description" href="./projects/transcendental-signified">
-                    <p class="project-title">transcendental signified</p>
-                </a>
-            </div>
+
+
+
 
 
         </div>
@@ -283,7 +330,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
 
 
-  
+
     <script src="./scripts/quotes.js"></script>
     <script src="script.js"></script>
 
