--- a/projects/christmasandclothes.html
+++ b/projects/christmasandclothes.html
@@ -50,9 +50,10 @@
 
     <!-- Back to top button -->
 
-    <img class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50px"
-        src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/chevron-up-circle-outline_jfaz33.svg"
-        alt="back to top icon">
+    <svg class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50" height="50" viewBox="0 0 512 512">
+        <path
+            d="M256 48C141.13 48 48 141.13 48 256s93.13 208 208 208 208-93.13 208-208S370.87 48 256 48zm80 280l-80-80-80 80-16-16 96-96 96 96z" />
+    </svg>
 
     <!--- Start of Navbar -->
 
@@ -111,8 +112,8 @@
 
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-twitter_bzblkx.svg"
+                <img class="extra-icon-image twitter"
+                    src="https://res.cloudinary.com/dhvalxorx/image/upload/v1735493760/Neec%20-%20Nonso/7740647_srug84.webp"
                     alt='extra-icon-image' />
             </a>
 
@@ -129,142 +130,45 @@
 
         <div class="project-items-words">
 
-            <h1 class="project-items-words-title">christmas and clothes.</h1>
+            <h1 class="project-items-words-title">christmas and clothes</h1>
 
             <p class="project-items-words-paragraph">
+
+
                 as a child growing up in south-east nigeria, my most cherished childhood memories are the ones that
-                happen during the christmas season. it is the period where the children are allowed to visit friends and
-                families adorned with special dresses bought by their parents for the festivities. while the period is
-                laden with gifts exchanged amongst families, friends, and neighbours, the children are transformed into
-                some sort of models as they brandish their new outfits and pose with the toys.
+                happen during the
+                christmas season. it is the period where the children are allowed to visit friends and families adorned
+                with special
+                dresses bought by their parents for the festivities. while the period is laden with gifts exchanged
+                amongst families,
+                friends, and neighbours, the children are transformed into some sort of models as they brandish their
+                new outfits and
+                pose with the toys.
+
 
             </p>
 
             <p class="project-items-words-paragraph">
                 christmas and clothes is an ongoing project; a portrait series of kids in omor of eastern nigeria,
-                wearing their christmas outfits, and holding their christmas toys, with poses resembling movie stars. i
-                am reflecting on childhood memories by examining what is popular amongst youngsters celebrating
-                christmas, and interrogating on a deeper scale - the universality of celebration which cuts across
-                social classes.
+                wearing their
+                christmas outfits, and holding their christmas toys, with poses resembling movie stars. i am reflecting
+                on childhood
+                memories by examining what is popular amongst youngsters celebrating christmas, and interrogating on a
+                deeper scale -
+                the universality of celebration which cuts across social classes.
+
             </p>
 
         </div>
 
-        <div class="main-exhibition">
+        <div class="carousel">
 
-            <div class="carousel">
-
-                <button class="carousel-button carousel--button-left is-hidden">
-                    <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/arrow-back-circle_ag2kln.svg"
-                        alt="arrow-back-circle">
-                </button>
-
-                <div class="carousel-track-container">
-
-                    <ul class="carousel-track">
-
-                        <li class="carousel-slide current-slide">
-
-                            <img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669894218/Projects/christmas-and-clothes/1_jpbg3s.webp"
-                                alt="christmasandclothes" loading="">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669894218/Projects/christmas-and-clothes/2_gdmbkr.webp"
-                                alt=" christmasandclothes" loading=""></li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669894218/Projects/christmas-and-clothes/3_ighe39.webp"
-                                alt=" christmasandclothes" loading=""></li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669894218/Projects/christmas-and-clothes/4_lmwxlv.webp"
-                                alt=" christmasandclothes" loading=""></li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669894217/Projects/christmas-and-clothes/5_dph4u8.webp"
-                                alt=" christmasandclothes" loading=""></li>
-                        <li class="carousel-slide current-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669894219/Projects/christmas-and-clothes/6-copy_spa2ud.webp"
-                                alt=" christmasandclothes" loading="lazy">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669894219/Projects/christmas-and-clothes/7_fq5s0y.webp"
-                                alt=" christmasandclothes" loading=""></li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669894219/Projects/christmas-and-clothes/8_mhymat.webp"
-                                alt=" christmasandclothes" loading=""></li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669894219/Projects/christmas-and-clothes/9_lrxnqm.webp"
-                                alt=" christmasandclothes" loading=""></li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669894219/Projects/christmas-and-clothes/10_up7ax1.webp"
-                                alt=" christmasandclothes" loading="">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669894219/Projects/christmas-and-clothes/11_uj2rd9.webp"
-                                alt=" christmasandclothes" loading="">
-                        </li>
-
-                    </ul>
-
-                </div>
-
-                <button class="carousel-button carousel--button-right">
-                    <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/arrow-forward-circle_hegcmn.svg"
-                        alt="arrow-forward-circle">
-                </button>
-
-            </div>
-
-            <div class="carousel-nav">
-                <button class="carousel-indicator current-slide"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-            </div>
-
-        </div>
-
-        <div class="project-items-mobile-images">
-
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669895106/Projects/christmas-and-clothes/mobile/1_kzrq5s.webp"
-                alt="christmasandclothes project images by neec nonse">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669895106/Projects/christmas-and-clothes/mobile/2_qxt3kj.webp"
-                alt="christmasandclothes project images by neec nonse">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669895106/Projects/christmas-and-clothes/mobile/3_vqc9mr.webp"
-                alt="christmasandclothes project images by neec nonse">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669895106/Projects/christmas-and-clothes/mobile/4_jsmgqi.webp"
-                alt="christmasandclothes project images by neec nonse">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669895106/Projects/christmas-and-clothes/mobile/5_eepjm9.webp"
-                alt="christmasandclothes project images by neec nonse">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669895106/Projects/christmas-and-clothes/mobile/6_km7trs.webp"
-                alt="christmasandclothes project images by neec nonse">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669895106/Projects/christmas-and-clothes/mobile/7_z46pjh.webp"
-                alt="christmasandclothes project images by neec nonse">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669895107/Projects/christmas-and-clothes/mobile/8_zh0j0w.webp"
-                alt="christmasandclothes project images by neec nonse">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669895107/Projects/christmas-and-clothes/mobile/9_kwymdv.webp"
-                alt="christmasandclothes project images by neec nonse">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669895107/Projects/christmas-and-clothes/mobile/10_kyd93z.webp"
-                alt="christmasandclothes project images by neec nonse">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669895107/Projects/christmas-and-clothes/mobile/11_qadnw2.webp"
-                alt="christmasandclothes project images by neec nonse">
+            <img src="https://res.cloudinary.com/dhvalxorx/image/upload/v1733495551/Neec%20-%20Nonso/Projects/12%20christmas%20and%20clothes%202017/9_zivvzb.webp"
+                alt="">
+            <img src="https://res.cloudinary.com/dhvalxorx/image/upload/v1733495551/Neec%20-%20Nonso/Projects/12%20christmas%20and%20clothes%202017/1_cikxlc.webp"
+                alt="">
+            <img src="https://res.cloudinary.com/dhvalxorx/image/upload/v1733495549/Neec%20-%20Nonso/Projects/12%20christmas%20and%20clothes%202017/11_reyoct.webp"
+                alt="">
 
         </div>
 
