--- a/projects/heads-of-state.html
+++ b/projects/heads-of-state.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title> how to photograph lagos - two | neec nonso | visual artist</title>
+    <title> heads of state | neec nonso | visual artist</title>
 
 
     <!-- Favicon -->
@@ -23,7 +23,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:title" content="homepage | neec nonso | visual artist">
     <meta property="og:description" content="neec nonso is a nigerian visual artist">
-    <meta property="og:url" content="https://www.neecnonso.com/projects/howtophotographylagos" />
+    <meta property="og:url" content="https://www.neecnonso.com/projects/head-of-state" />
     <meta property="og:image"
         content="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/ogimage_r9q3lw.png" />
 
@@ -38,16 +38,18 @@
         content="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/ogimage_r9q3lw.png" />
 
     <!-- Style Links 
-    
-        <link rel="stylesheet" href="minify.css"> 
-    -->
+
+    <link rel="stylesheet" href="minify.css"> 
+-->
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/mobile.css">
 
 </head>
 
 <body>
+
     <!-- Back to top button -->
+
     <svg class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50" height="50" viewBox="0 0 512 512">
         <path
             d="M256 48C141.13 48 48 141.13 48 256s93.13 208 208 208 208-93.13 208-208S370.87 48 256 48zm80 280l-80-80-80 80-16-16 96-96 96 96z" />
@@ -128,61 +130,64 @@
 
         <div class="project-items-words">
 
-            <h1 class="project-items-words-title">how to photograph lagos 2</h1>
+            <h1 class="project-items-words-title">heads of state</h1>
 
-            <p class="project-items-words-paragraph"> lagos is a city where slow and steady wins the race... philosophy
-                is not
-                tolerated. it’s a city where
-                calmness is
-                misinterpreted as sluggishness and weakness. but you cannot blame the people, because in a city (whose
-                population is
-                above twenty million) most of whom have left their known world in the village for the ‘lagos dream’,
-                exhibiting the
-                innate desire of the communal is trivial, considered a waste of time, or as the people would say, ‘there
-                is
-                no time to
-                check time.'
+            <p class="project-items-words-paragraph">
+
+                “heads of state” is a raw confrontation with the leaders who fail us, exposing the damage
+                they cause and the corruption they hide. inspired by the bold, confident portraits of
+                politicians displayed in public spaces—images that make them appear saintly and trustworthy
+                — i wanted to break through this illusion; tearing through the fake realities they’ve
+                built. these portraits are often weapons of manipulation, projecting authority and
+                integrity where there is none.
+            </p>
+
+            <p class="project-items-words-paragraph">
+
+                through photography and incorporating digital techniques, i recreate portraites of these
+                presidents and prime ministers accross the world who lack the humanity and wisdom to lead.
+                they are not real leaders; they are artificial, just like the false image they project.
+                these leaders are impostors, holding power but lacking the qualities needed to govern with
+                any care for the people.
+
+
 
             </p>
 
             <p class="project-items-words-paragraph">
-                kokowa is a wrestling sport popular in northern nigeria. agile men
-                wrestle
-                while gathered spectators cheer
-                their
-                champions. in 2018, i encountered this sport under obalende bridge. the sport has traveled from the far
-                north to lagos,
-                and the lagos audience is spectacular as they stood still to enjoy a game that they've missed (abandoned
-                in
-                the village)
-                for the lagos dream.
+                the thousands of thousands of dots i’ve added to the prints cut
+                through each image like
+                scars. they are deliberate marks that hide the imperfections in the prints, much like
+                corrupt leaders hide their flaws behind the facade of power. these dots are not just a way
+                to cover up, but a way to force the viewer to see what’s beneath the surface—just like we
+                must look beyond the lies of those in charge. the marks are a refusal to let them seem
+                perfect, a reminder that their polished image is just that—an image. i’m showing them for
+                what they truly are, with all their cracks and dirt exposed.
             </p>
 
             <p class="project-items-words-paragraph">
-                making this project encouraged me to identify traces of communality in spaces that have been bleached
-                colourless; where
-                the liminal has atrophied into the profane, as the people seek to embrace the concept of individualism.
-                in
-                this project,
-                i also found an answer to a foresighted question: 'how does one make lagos to stand still for a
-                portrait.'
-                it is
-                noteworthy that lagos is attentive to theatrics.
+                this work is about calling out those in power, revealing the truth
+                behind the lies. it’s
+                about forcing us to face the corruption that runs through the core of our leadership, and
+                demanding a change.
             </p>
 
         </div>
 
         <div class="carousel">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+            <img src="https://res.cloudinary.com/dhvalxorx/image/upload/v1733494977/Neec%20-%20Nonso/Projects/1%20heads%20of%20state%2C%202024/1_commander-in-chief_of_the_cuntry_k3gipi.webp"
+                alt="">
+            <img src="https://res.cloudinary.com/dhvalxorx/image/upload/v1733494973/Neec%20-%20Nonso/Projects/1%20heads%20of%20state%2C%202024/2_teeveesee_kews8i.webp"
+                alt="">
+            <img src="https://res.cloudinary.com/dhvalxorx/image/upload/v1733494979/Neec%20-%20Nonso/Projects/1%20heads%20of%20state%2C%202024/3_this_vegetable_is_potent_xbhdkn.webp"
+                alt="">
+
 
         </div>
 
-
     </main>
-    <!-- End of Main -->
 
+    <!-- End of Main -->
 
     <!-- Start of Footer -->
 
@@ -202,6 +207,7 @@
 
     <script src="../script.js" async defer></script>
     <script src="../scripts/projects.js" async defer></script>
+
 </body>
 
 </html>
