--- a/projects/theboysfraternity.html
+++ b/projects/theboysfraternity.html
@@ -46,9 +46,10 @@
 
 <body>
     <!-- Back to top button -->
-    <img class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50px"
-        src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/chevron-up-circle-outline_jfaz33.svg"
-        alt="back to top icon">
+    <svg class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50" height="50" viewBox="0 0 512 512">
+        <path
+            d="M256 48C141.13 48 48 141.13 48 256s93.13 208 208 208 208-93.13 208-208S370.87 48 256 48zm80 280l-80-80-80 80-16-16 96-96 96 96z" />
+    </svg>
 
     <!--- Start of Navbar -->
 
@@ -107,8 +108,8 @@
 
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-twitter_bzblkx.svg"
+                <img class="extra-icon-image twitter"
+                    src="https://res.cloudinary.com/dhvalxorx/image/upload/v1735493760/Neec%20-%20Nonso/7740647_srug84.webp"
                     alt='extra-icon-image' />
             </a>
 
@@ -138,6 +139,7 @@
                 and music. they make money which they share among themselves and return to their parents before
                 disbanding for the
                 christmas festival.
+
             </p>
 
             <p class="project-items-words-paragraph">
@@ -151,13 +153,12 @@
             </p>
 
             <p class="project-items-words-paragraph">boys' fraternity seeks to reveal the facets and concepts of life
-                that
-                nurtures the origin-original of
-                the african boy
+                that nurtures the origin-original of the african boy
                 child, using the uraga and ajas children masquerades of nsukka in eastern nigeria.
+            </p>
 
-                from the attainment of consciousness, the african boy child wants to become many things, but as he
-                grows, he cross-fades
+            <p class="project-items-words-paragraph">from the attainment of consciousness, the african boy child wants
+                to become many things, but as he grows, he cross-fades
                 from the communal, to the individual; from his innate fantasies; the escapee of becoming the dreamth to
                 the real as not
                 wished.
@@ -166,125 +167,21 @@
 
         </div>
 
+        <div class="carousel">
 
-        <div class="main-exhibition">
+            <img src="https://res.cloudinary.com/dhvalxorx/image/upload/v1735496700/Neec%20-%20Nonso/Projects/11%20the%20boys%20fraternity%2C%202018/3_exgbgb.webp"
+                alt="">
+            <img src="https://res.cloudinary.com/dhvalxorx/image/upload/v1735496693/Neec%20-%20Nonso/Projects/11%20the%20boys%20fraternity%2C%202018/2_pxbniz.webp"
+                alt="">
+            <img src="https://res.cloudinary.com/dhvalxorx/image/upload/v1735496700/Neec%20-%20Nonso/Projects/11%20the%20boys%20fraternity%2C%202018/3_exgbgb.webp"
+                alt="">
 
-            <div class="carousel potrait">
-
-                <button class="carousel-button carousel--button-left is-hidden">
-                    <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/arrow-forward-circle_hegcmn.svg"
-                        alt="arrow back button">
-                </button>
-
-                <div class="carousel-track-container">
-
-                    <ul class="carousel-track">
-
-                        <li class="carousel-slide current-slide"><img class="carousel-image potrait"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904102/Projects/the%20boys%20fraternity/1_bhwl64.webp"
-                                alt=" theboysfraternity" loading="lazy">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image potrait"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904102/Projects/the%20boys%20fraternity/2_wwuzoy.webp"
-                                alt=" theboysfraternity" loading="lazy">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image potrait"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904102/Projects/the%20boys%20fraternity/3_dovmp3.webp"
-                                alt=" theboysfraternity" loading="lazy">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image potrait"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904102/Projects/the%20boys%20fraternity/4_qihmte.webp"
-                                alt=" theboysfraternity" loading="lazy">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image potrait"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904102/Projects/the%20boys%20fraternity/5_kzklm1.webp"
-                                alt=" theboysfraternity" loading="lazy">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image potrait"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904102/Projects/the%20boys%20fraternity/6_orp5p2.webp"
-                                alt=" theboysfraternity" loading="lazy">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image potrait"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904103/Projects/the%20boys%20fraternity/7_ongsis.webp"
-                                alt=" theboysfraternity" loading="lazy">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image potrait"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904103/Projects/the%20boys%20fraternity/8_n0zxtu.webp"
-                                alt=" theboysfraternity" loading="lazy">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image potrait"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904104/Projects/the%20boys%20fraternity/9_bhy4gn.webp"
-                                alt=" theboysfraternity" loading="lazy">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image potrait"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904103/Projects/the%20boys%20fraternity/10_oeewzj.webp"
-                                alt=" theboysfraternity" loading="lazy">
-                        </li>
-
-
-                    </ul>
-
-                </div>
-
-                <button class="carousel-button carousel--button-right">
-                    <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/arrow-forward-circle_hegcmn.svg"
-                        alt="arrow forward button">
-                </button>
-
-            </div>
-
-            <div class="carousel-nav">
-                <button class="carousel-indicator current-slide"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-            </div>
 
         </div>
 
-
-        <div class="project-items-mobile-images">
-
-            <img class="mobile-images mobile"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904111/Projects/the%20boys%20fraternity/mobile/1_xrowpx.webp"
-                alt="the boys fraternity photos">
-            <img class="mobile-images mobile"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904110/Projects/the%20boys%20fraternity/mobile/2_rvvqbg.webp"
-                alt="the boys fraternity photos">
-            <img class="mobile-images mobile"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904110/Projects/the%20boys%20fraternity/mobile/3_buylx4.webp"
-                alt="the boys fraternity photos">
-            <img class="mobile-images mobile"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904110/Projects/the%20boys%20fraternity/mobile/4_ha7adq.webp"
-                alt="the boys fraternity photos">
-            <img class="mobile-images mobile"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904110/Projects/the%20boys%20fraternity/mobile/5_t5rhmn.webp"
-                alt="the boys fraternity photos">
-            <img class="mobile-images mobile"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904110/Projects/the%20boys%20fraternity/mobile/6_cxd0v7.webp"
-                alt="the boys fraternity photos">
-            <img class="mobile-images mobile"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904111/Projects/the%20boys%20fraternity/mobile/7_fn2e8h.webp"
-                alt="the boys fraternity photos">
-            <img class="mobile-images mobile"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904111/Projects/the%20boys%20fraternity/mobile/8_jdxdjx.webp"
-                alt="the boys fraternity photos">
-            <img class="mobile-images mobile"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904111/Projects/the%20boys%20fraternity/mobile/9_nixzzt.webp"
-                alt="the boys fraternity photos">
-            <img class="mobile-images mobile"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904111/Projects/the%20boys%20fraternity/mobile/10_t7quax.webp"
-                alt="the boys fraternity photos">
-
-        </div>
 
     </main>
+
     <!-- End of Main -->
 
     <!-- Start of Footer -->
