--- a/projects/thelastburial.html
+++ b/projects/thelastburial.html
@@ -47,9 +47,10 @@
 <body>
 
     <!-- Back to top button -->
-    <img class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50px"
-        src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/chevron-up-circle-outline_jfaz33.svg"
-        alt="back to top icon">
+    <svg class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50" height="50" viewBox="0 0 512 512">
+        <path
+            d="M256 48C141.13 48 48 141.13 48 256s93.13 208 208 208 208-93.13 208-208S370.87 48 256 48zm80 280l-80-80-80 80-16-16 96-96 96 96z" />
+    </svg>
 
     <!--- Start of Navbar -->
     <div class="header">
@@ -107,8 +108,8 @@
 
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-twitter_bzblkx.svg"
+                <img class="extra-icon-image twitter"
+                    src="https://res.cloudinary.com/dhvalxorx/image/upload/v1735493760/Neec%20-%20Nonso/7740647_srug84.webp"
                     alt='extra-icon-image' />
             </a>
 
@@ -129,83 +130,34 @@
 
             <p class="project-items-words-paragraph">
                 in july 2011, i mourned my mother. she was buried beside our home without a headstone, beneath a guava
-                tree.
-                i was
+                tree. i was
                 unable to shed a tear during her burial, but every now and then, i encounter moments that trigger me
-                into
-                tears.
+                into tears.
 
+            </p>
+
+            <p class="project-items-words-paragraph">
                 ten years later, i visited ikogosi town and noticed that the residents buried their deceased within
-                their
-                homes.
+                their homes.
             </p>
 
             <p class="project-items-words-paragraph">
                 strangely, this project coincides with my mother's burial month, and through this project, i re-enact
-                her
-                burial
+                her burial
                 ceremony to honour her memory, using my body and installation pieces to explore the nuances i exhumed
-                during
-                my visit to
+                during my visit to
                 ikogosi.
             </p>
 
         </div>
 
-        <div class="main-exhibition">
-
-            <div class="carousel">
-
-                <button class="carousel-button carousel--button-left is-hidden">
-                    <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/arrow-back-circle_ag2kln.svg"
-                        alt="arrow back button">
-                </button>
-
-                <div class="carousel-track-container">
-
-                    <ul class="carousel-track">
-                        <li class="carousel-slide current-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669906012/Projects/the%20last%20burial/1_k5n0rf.webp"
-                                alt=" thelastburial" loading="lazy">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669906012/Projects/the%20last%20burial/2_vnwt3k.webp"
-                                alt=" thelastburial" loading="lazy">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669906011/Projects/the%20last%20burial/3_eua4yc.webp"
-                                alt="thelastburial" loading="lazy"></li>
-                    </ul>
-
-                </div>
-
-                <button class="carousel-button carousel--button-right">
-                    <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/arrow-forward-circle_hegcmn.svg"
-                        alt="arrow forward button">
-                </button>
-
-            </div>
-
-            <div class="carousel-nav">
-                <button class="carousel-indicator current-slide"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-
-            </div>
-
-        </div>
-
-        <div class="project-items-mobile-images">
-
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669906025/Projects/the%20last%20burial/mobile/1_qcb3ze.webp"
-                alt="thelastburial mobile">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669906024/Projects/the%20last%20burial/mobile/3_vy6gvd.webp"
-                alt="thelastburial mobile">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669906024/Projects/the%20last%20burial/mobile/2_sniiqd.webp"
-                alt="thelastburial mobile">
+        <div class="carousel">
+            <img src="https://res.cloudinary.com/dhvalxorx/image/upload/v1733495289/Neec%20-%20Nonso/Projects/6%20the%20last%20burial%2C%202021/1_eyp1lj.webp"
+                alt="">
+            <img src="https://res.cloudinary.com/dhvalxorx/image/upload/v1733495289/Neec%20-%20Nonso/Projects/6%20the%20last%20burial%2C%202021/2_ficevg.webp"
+                alt="">
+            <img src="https://res.cloudinary.com/dhvalxorx/image/upload/v1733495289/Neec%20-%20Nonso/Projects/6%20the%20last%20burial%2C%202021/3_gfl4vs.webp"
+                alt="">
 
         </div>
 
