--- a/projects/toiletintoiletout.html
+++ b/projects/toiletintoiletout.html
@@ -50,9 +50,10 @@
 
 <body>
     <!-- Back to top button -->
-    <img class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50px"
-        src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/chevron-up-circle-outline_jfaz33.svg"
-        alt="back to top icon">
+    <svg class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50" height="50" viewBox="0 0 512 512">
+        <path
+            d="M256 48C141.13 48 48 141.13 48 256s93.13 208 208 208 208-93.13 208-208S370.87 48 256 48zm80 280l-80-80-80 80-16-16 96-96 96 96z" />
+    </svg>
 
     <!--- Start of Navbar -->
 
@@ -111,8 +112,8 @@
 
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-twitter_bzblkx.svg"
+                <img class="extra-icon-image twitter"
+                    src="https://res.cloudinary.com/dhvalxorx/image/upload/v1735493760/Neec%20-%20Nonso/7740647_srug84.webp"
                     alt='extra-icon-image' />
             </a>
 
@@ -130,20 +131,19 @@
 
         <div class="project-items-words">
 
-            <h1 class="project-items-words-title">toilet in,toilet out.</h1>
+            <h1 class="project-items-words-title">toilet in, toilet out</h1>
 
 
             <p class="project-items-words-paragraph">
 
+
+
                 toilet in, toilet out is a project that re-enacts the dual worlds we live in the toilet; the escapades
-                and
-                the escapes
+                and the escapes
                 in this little room of 'relief'. shiting is a religion, and it unfolds not only in the toilet, but also
-                in
-                the mind. in
+                in the mind. in
                 the inside of the mind are repressed emotions; buried ideas, feelings and deep desires waiting to
-                implode,
-                as we offload
+                implode, as we offload
                 the shits living inside us. this innate things sometimes escape us, as we rebel and express them raw;
                 vandalising the
                 four gestapo like walls of the toilet with graffiti.
@@ -151,120 +151,18 @@
 
         </div>
 
-        <div class="main-exhibition">
+        <div class="carousel">
 
-            <div class="carousel">
+            <img src="https://res.cloudinary.com/dhvalxorx/image/upload/v1733495616/Neec%20-%20Nonso/Projects/7%20toilet%20in%2C%20toilet%20out%202021/1_betho2.webp"
+                alt="">
+            <img src="https://res.cloudinary.com/dhvalxorx/image/upload/v1733495617/Neec%20-%20Nonso/Projects/7%20toilet%20in%2C%20toilet%20out%202021/2_zvqrrs.webp"
+                alt="">
+            <img src="https://res.cloudinary.com/dhvalxorx/image/upload/v1733495618/Neec%20-%20Nonso/Projects/7%20toilet%20in%2C%20toilet%20out%202021/3_s2ttge.webp"
+                alt="">
 
-                <button class="carousel-button carousel--button-left is-hidden">
-                    <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/arrow-back-circle_ag2kln.svg"
-                        alt="arrow-back-circle">
-                </button>
-
-                <div class="carousel-track-container">
-
-                    <ul class="carousel-track">
-
-                        <li class="carousel-slide current-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904132/Projects/toilet%20in%2C%20toilet%20out/1_mcqyhb.webp"
-                                alt="toilet in toilet out" loading="">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904132/Projects/toilet%20in%2C%20toilet%20out/2_cawnkb.webp"
-                                alt="toilet in toilet out" loading="">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904130/Projects/toilet%20in%2C%20toilet%20out/3_wdxqtd.webp"
-                                alt="toilet in toilet out" loading="">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904131/Projects/toilet%20in%2C%20toilet%20out/4_eil5gn.webp"
-                                alt="toilet in toilet out" loading="">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904131/Projects/toilet%20in%2C%20toilet%20out/5_shg5m6.webp"
-                                alt="toilet in toilet out" loading="">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904132/Projects/toilet%20in%2C%20toilet%20out/6_iqys8q.webp"
-                                alt="toilet in toilet out" loading="">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904131/Projects/toilet%20in%2C%20toilet%20out/7_ctmpih.webp"
-                                alt="toilet in toilet out" loading="">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904134/Projects/toilet%20in%2C%20toilet%20out/8_c2qhop.webp"
-                                alt="toilet in toilet out" loading="">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904132/Projects/toilet%20in%2C%20toilet%20out/9_hk5pgo.webp"
-                                alt="toilet in toilet out" loading="">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904132/Projects/toilet%20in%2C%20toilet%20out/10_xskamw.webp"
-                                alt="toilet in toilet out" loading="">
-                        </li>
-
-                    </ul>
-
-                </div>
-
-                <button class="carousel-button carousel--button-right">
-                    <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/arrow-forward-circle_hegcmn.svg"
-                        alt="arrow-forward-circle">
-                </button>
-
-            </div>
-
-            <div class="carousel-nav">
-                <button class="carousel-indicator current-slide"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-            </div>
 
         </div>
 
-        <div class="project-items-mobile-images">
-
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904147/Projects/toilet%20in%2C%20toilet%20out/mobile/1_od2fj5.webp"
-                alt="toilet in toilet out">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904147/Projects/toilet%20in%2C%20toilet%20out/mobile/2_z2zmvc.webp"
-                alt="toilet in toilet out">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904147/Projects/toilet%20in%2C%20toilet%20out/mobile/3_uqt9de.webp"
-                alt="toilet in toilet out">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904147/Projects/toilet%20in%2C%20toilet%20out/mobile/4_y9dzly.webp"
-                alt="toilet in toilet out">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904147/Projects/toilet%20in%2C%20toilet%20out/mobile/5_nwwgmu.webp"
-                alt="toilet in toilet out">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904148/Projects/toilet%20in%2C%20toilet%20out/mobile/6_hu6xys.webp"
-                alt="toilet in toilet out">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904148/Projects/toilet%20in%2C%20toilet%20out/mobile/7_k4joln.webp"
-                alt="toilet in toilet out">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904148/Projects/toilet%20in%2C%20toilet%20out/mobile/8_j8qqpq.webp"
-                alt="toilet in toilet out">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904148/Projects/toilet%20in%2C%20toilet%20out/mobile/9_cueueb.webp"
-                alt="toilet in toilet out">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904148/Projects/toilet%20in%2C%20toilet%20out/mobile/10_ggz1li.webp"
-                alt="toilet in toilet out">
-
-        </div>
 
     </main>
 
