--- a/projects/transcendental-signified.html
+++ b/projects/transcendental-signified.html
@@ -47,9 +47,10 @@
 
 <body>
     <!-- Back to top button -->
-    <img class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50px"
-        src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/chevron-up-circle-outline_jfaz33.svg"
-        alt="back to top icon">
+    <svg class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50" height="50" viewBox="0 0 512 512">
+        <path
+            d="M256 48C141.13 48 48 141.13 48 256s93.13 208 208 208 208-93.13 208-208S370.87 48 256 48zm80 280l-80-80-80 80-16-16 96-96 96 96z" />
+    </svg>
 
     <!--- Start of Navbar -->
 
@@ -108,8 +109,8 @@
 
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-twitter_bzblkx.svg"
+                <img class="extra-icon-image twitter"
+                    src="https://res.cloudinary.com/dhvalxorx/image/upload/v1735493760/Neec%20-%20Nonso/7740647_srug84.webp"
                     alt='extra-icon-image' />
             </a>
 
@@ -179,86 +180,18 @@
 
         </div>
 
-        <div class="main-exhibition">
-
-            <div class="carousel">
-
-                <button class="carousel-button carousel--button-left is-hidden">
-                    <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/arrow-back-circle_ag2kln.svg"
-                        alt="arrow-back-circle">
-                </button>
-
-                <div class="carousel-track-container">
-
-                    <ul class="carousel-track">
-
-                        <li class="carousel-slide current-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904193/Projects/transcendental-signified/1_v5jlek.webp"
-                                alt="waitingforchineke"></li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904192/Projects/transcendental-signified/2_ttchnu.webp"
-                                alt="waitingforchineke"></li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904191/Projects/transcendental-signified/3_djvec9.webp"
-                                alt="waitingforchineke"></li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904192/Projects/transcendental-signified/4_awjqpu.webp"
-                                alt="waitingforchineke"></li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904192/Projects/transcendental-signified/5_dtojsr.webp"
-                                alt="waitingforchineke"></li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904192/Projects/transcendental-signified/6_j78upv.webp"
-                                alt="waitingforchineke"></li>
-
-                    </ul>
-
-                </div>
-
-                <button class="carousel-button carousel--button-right">
-                    <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/arrow-forward-circle_hegcmn.svg"
-                        alt="arrow-forward-circle">
-                </button>
-
-
-            </div>
-
-            <div class="carousel-nav">
-
-                <button class="carousel-indicator current-slide"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-
-            </div>
-
-        </div>
-
-        <div class="project-items-mobile-images">
-
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904200/Projects/transcendental-signified/mobile/1_jd52wr.webp"
-                alt="transcendental-signified images by neec nonso">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904200/Projects/transcendental-signified/mobile/2_bhsw6m.webp"
-                alt="transcendental-signified images by neec nonso">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904201/Projects/transcendental-signified/mobile/3_ckwjrl.webp"
-                alt="transcendental-signified images by neec nonso">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904200/Projects/transcendental-signified/mobile/4_zzvvgc.webp"
-                alt="transcendental-signified images by neec nonso">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904200/Projects/transcendental-signified/mobile/5_h6egop.webp"
-                alt="transcendental-signified images by neec nonso">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904200/Projects/transcendental-signified/mobile/6_qxo3cb.webp"
-                alt="transcendental-signified images by neec nonso">
+        <div class="carousel">
+            <img src="https://res.cloudinary.com/dhvalxorx/image/upload/v1733495464/Neec%20-%20Nonso/Projects/4%20transcendental%20signified%2C%202022/1_pmvmhq.webp"
+                alt="">
+            <img src="https://res.cloudinary.com/dhvalxorx/image/upload/v1733495464/Neec%20-%20Nonso/Projects/4%20transcendental%20signified%2C%202022/2_k8grjk.webp"
+                alt="">
+            <img src="https://res.cloudinary.com/dhvalxorx/image/upload/v1733495465/Neec%20-%20Nonso/Projects/4%20transcendental%20signified%2C%202022/3_qnf3z4.webp"
+                alt="">
 
 
         </div>
+
+
 
 
     </main>
