--- a/projects/waitingforchineke.html
+++ b/projects/waitingforchineke.html
@@ -47,9 +47,10 @@
 
 <body>
     <!-- Back to top button -->
-    <img class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50px"
-        src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/chevron-up-circle-outline_jfaz33.svg"
-        alt="back to top icon">
+    <svg class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50" height="50" viewBox="0 0 512 512">
+        <path
+            d="M256 48C141.13 48 48 141.13 48 256s93.13 208 208 208 208-93.13 208-208S370.87 48 256 48zm80 280l-80-80-80 80-16-16 96-96 96 96z" />
+    </svg>
 
     <!--- Start of Navbar -->
 
@@ -108,8 +109,8 @@
 
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-twitter_bzblkx.svg"
+                <img class="extra-icon-image twitter"
+                    src="https://res.cloudinary.com/dhvalxorx/image/upload/v1735493760/Neec%20-%20Nonso/7740647_srug84.webp"
                     alt='extra-icon-image' />
             </a>
 
@@ -125,155 +126,66 @@
     <main class="project-items-main">
 
         <div class="project-items-words">
-            <h1 class="project-items-words-title">waiting for chineke.</h1>
+            <h1 class="project-items-words-title italic">waiting for chineke</h1>
 
 
             <p class="project-items-words-paragraph">
-                waiting for chineke is a satire of the socio-religio space of the twenty-first century nigerian
-                christian.
 
-                the project title is inspired by irish playwright and novelist samuel beckett's waiting for godot. this
-                play, unarguably
-                a theatre of the absurd first theatrical success, is a two act tragi-comedy play that consists of
-                conversations between
-                vladimir and estragon, who are waiting for the arrival of the mysterious godot, who continually sends
-                word
-                that he will
-                appear but who never does.
+
+                <span class="italic">waiting for chineke</span> is a satirical exploration of the universal dynamics of
+                faith, authority, and the human tendency to
+                wait for salvation promised by divine figures. inspired by samuel beckett’s <span class="italic">waiting
+                    for godot</span>—a landmark in the theatre
+                of the absurd—this project draws parallels between the endless waiting in beckett’s play and the
+                perpetual anticipation
+                of a messianic return often central to christianity worldwide. in <span class="italic">waiting for
+                    godot</span>, vladimir and estragon wait in vain
+                for the mysterious godot, who continually promises to appear but never does. similarly, <span
+                    class="italic">waiting for chineke</span> interrogates
+                the cycles of hope and unfulfilled promises that shape religious devotion.
 
             </p>
+
+            <span class="italic"></span>
 
             <p class="project-items-words-paragraph">
 
-                but my subject matter is drawn from my weekly experience with my father’s church. my father was a
-                prophet
-                and clergyman
-                of love and faith gospel ministry; a penticostal church like a lot others that dots the streets of lagos
-                and
-                nigeria.
-                this brand of christianity prophesies doom, teaches their members to follow christ and wait upon him cos
-                ‘jesus is
-                coming very soon’.
+                this subject matter is deeply personal, rooted in my weekly experiences growing up in my father’s
+                church. as a prophet
+                and clergyman in love and faith gospel ministry—a pentecostal church typical of those scattered across
+                lagos and
+                nigeria—my father embodied a brand of christianity that prophesied doom while teaching members to “wait
+                upon the lord”
+                because “jesus is coming very soon.”
+                witnessing the pattern, and unshakable belief systems within the church sparked my curiosity about the
+                broader
+                socio-religious structures that fuel such faith.
+            </p>
+
+            <p class="project-items-words-paragraph">
+                at the heart of <span class="italic">waiting for chineke</span> is a critique of how religious
+                leaders—often self-proclaimed “men of god”—assert
+                divine authority, claiming to be “called by god” to lead their congregations. these figures frequently
+                use their
+                positions to consolidate power and material wealth, thriving off the hopes and fears of their followers.
+                the prolonged
+                delay of a messianic figure’s return often leaves communities caught in cycles of waiting, where
+                spiritual anticipation
+                is intertwined with manipulation and exploitation.
             </p>
 
         </div>
 
-        <div class="main-exhibition">
-
-            <div class="carousel">
-
-                <button class="carousel-button carousel--button-left is-hidden">
-                    <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/arrow-back-circle_ag2kln.svg"
-                        alt="arrow-back-circle">
-                </button>
-
-                <div class="carousel-track-container">
-
-                    <ul class="carousel-track">
-
-                        <li class="carousel-slide current-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904221/Projects/waiting%20for%20chineke/1_fj2z4z.webp"
-                                alt="waitingforchineke">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904218/Projects/waiting%20for%20chineke/2_l8olpm.webp"
-                                alt="waitingforchineke">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904219/Projects/waiting%20for%20chineke/2b_ommjti.webp"
-                                alt="waitingforchineke"></li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904219/Projects/waiting%20for%20chineke/3_vaxvzg.webp"
-                                alt="waitingforchineke">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904220/Projects/waiting%20for%20chineke/4_qrtvgy.webp"
-                                alt="waitingforchineke">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904219/Projects/waiting%20for%20chineke/5_y5k9k1.webp"
-                                alt="waitingforchineke">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904219/Projects/waiting%20for%20chineke/6_srfkxl.webp"
-                                alt="waitingforchineke">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904219/Projects/waiting%20for%20chineke/7_j0fqt0.webp"
-                                alt="waitingforchineke">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904220/Projects/waiting%20for%20chineke/8_ulyvm4.webp"
-                                alt="waitingforchineke">
-                        </li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904220/Projects/waiting%20for%20chineke/9_e7cify.webp"
-                                alt="waitingforchineke">
-                        </li>
-
-                    </ul>
-
-                </div>
-
-                <button class="carousel-button carousel--button-right">
-                    <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/arrow-forward-circle_hegcmn.svg"
-                        alt="arrow-forward-circle">
-                </button>
-
-
-            </div>
-
-            <div class="carousel-nav">
-                <button class="carousel-indicator current-slide"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-
-            </div>
+        <div class="carousel">
+            <img src="https://res.cloudinary.com/dhvalxorx/image/upload/v1733495412/Neec%20-%20Nonso/Projects/10%20waiting%20for%20chineke%2C%202018/1_zahy2t.webp"
+                alt="waiting for chineke by neec nonso">
+            <img src="https://res.cloudinary.com/dhvalxorx/image/upload/v1733495412/Neec%20-%20Nonso/Projects/10%20waiting%20for%20chineke%2C%202018/2_vmxmlj.webp"
+                alt="waiting for chineke by neec nonso">
+            <img src="https://res.cloudinary.com/dhvalxorx/image/upload/v1733495411/Neec%20-%20Nonso/Projects/10%20waiting%20for%20chineke%2C%202018/3_q2zke4.webp"
+                alt="waiting for chineke by neec nonso">
 
         </div>
 
-        <div class="project-items-mobile-images">
-
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904228/Projects/waiting%20for%20chineke/mobile/1_z3vjrf.webp"
-                alt="waitngforchineke-mobile-image">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904228/Projects/waiting%20for%20chineke/mobile/2_iy4fjh.webp"
-                alt="waitngforchineke-mobile-image">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904228/Projects/waiting%20for%20chineke/mobile/2b_etfmdo.webp"
-                alt="waitngforchineke-mobile-image">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904228/Projects/waiting%20for%20chineke/mobile/3_k8bqiv.webp"
-                alt="waitngforchineke-mobile-image">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904228/Projects/waiting%20for%20chineke/mobile/4_ngwj4z.webp"
-                alt="waitngforchineke-mobile-image">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904228/Projects/waiting%20for%20chineke/mobile/5_p0snso.webp"
-                alt="waitngforchineke-mobile-image">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904229/Projects/waiting%20for%20chineke/mobile/6_eqon23.webp"
-                alt="waitngforchineke-mobile-image">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904229/Projects/waiting%20for%20chineke/mobile/7_jkd67w.webp"
-                alt="waitngforchineke-mobile-image">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904229/Projects/waiting%20for%20chineke/mobile/8_o9bnqh.webp"
-                alt="waitngforchineke-mobile-image">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904229/Projects/waiting%20for%20chineke/mobile/9_orulph.webp"
-                alt="waitngforchineke-mobile-image">
-
-
-        </div>
 
     </main>
 
