--- a/projects/whatwasdeadwasneverdead.html
+++ b/projects/whatwasdeadwasneverdead.html
@@ -50,9 +50,10 @@
 
 <body>
     <!-- Back to top button -->
-    <img class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50px"
-        src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/chevron-up-circle-outline_jfaz33.svg"
-        alt="back to top icon">
+    <svg class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50" height="50" viewBox="0 0 512 512">
+        <path
+            d="M256 48C141.13 48 48 141.13 48 256s93.13 208 208 208 208-93.13 208-208S370.87 48 256 48zm80 280l-80-80-80 80-16-16 96-96 96 96z" />
+    </svg>
 
     <!--- Start of Navbar -->
 
@@ -111,8 +112,8 @@
 
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-twitter_bzblkx.svg"
+                <img class="extra-icon-image twitter"
+                    src="https://res.cloudinary.com/dhvalxorx/image/upload/v1735493760/Neec%20-%20Nonso/7740647_srug84.webp"
                     alt='extra-icon-image' />
             </a>
 
@@ -132,19 +133,19 @@
             <h1 class="project-items-words-title what">what was dead was never dead</h1>
 
             <p class="project-items-words-paragraph">
-                what was dead was never dead is an ongoing project that examines the universal belief in reincarnation
-                and
-                posthumous
+
+                <span class="italic">what was dead was never dead</span> is an ongoing project that examines the
+                universal belief in reincarnation
+                and posthumous
                 existence of dead relatives. in nigeria, people believe that human effort and achievement do not end
-                with
-                death on the
+                with death on the
                 earthly plane. this cosmological belief is articulated in a lot of different origin stories, many of
-                which
-                are built
+                which are built
                 around individuals and archetypes in ghostland.
             </p>
 
             <p class="project-items-words-paragraph">
+
                 the world is an endless loop of the living and dead; coming and going. for instance, among the yoruba
                 people, the
                 universe is conceived as a three-storied structure: heavenworld above, earthworld and, the
@@ -160,92 +161,30 @@
                 dead, are never dead.
             </p>
 
-            <p class="project-items-words-paragraph last">
-                in this body of work, i try to capture the living-dead, by examining intimate family stories―to exhume
-                memories, popular
-                myths and taboos surrounding death, reincarnation and the universal belief in the afterlife.
 
+            <p class="project-items-words-paragraph">
+
+                in this body of work, i try to capture the living-dead, by examining intimate family stories―to exhume
+                memories,
+                popular
+                myths and taboos surrounding death, reincarnation and the universal belief in the afterlife.
             </p>
 
-        </div>
-
-        <div class="main-exhibition">
-
-            <div class="carousel">
-
-                <button class="carousel-button carousel--button-left is-hidden">
-                    <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/arrow-back-circle_ag2kln.svg"
-                        alt="arrow back button">
-                </button>
-
-                <div class="carousel-track-container">
-
-                    <ul class="carousel-track">
-
-                        <li class="carousel-slide current-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904310/Projects/what%20was%20dead%20was%20never%20dead/neec.nonso--1_rk6pkd.webp"
-                                alt=" Temple Image" loading=""></li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904310/Projects/what%20was%20dead%20was%20never%20dead/neec.nonso--2_dayek7.webp"
-                                alt=" Temple Image" loading=""></li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904310/Projects/what%20was%20dead%20was%20never%20dead/neec.nonso--3_n5aoda.webp"
-                                alt=" Temple Image" loading=""></li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904310/Projects/what%20was%20dead%20was%20never%20dead/neec.nonso--4_ox3722.webp"
-                                alt=" Temple Image" loading=""></li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904310/Projects/what%20was%20dead%20was%20never%20dead/neec.nonso--5_f3u9ca.webp"
-                                alt=" Temple Image" loading=""></li>
-                        <li class="carousel-slide"><img class="carousel-image"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904311/Projects/what%20was%20dead%20was%20never%20dead/neec.nonso--6_uywir1.webp"
-                                alt=" Temple Image" loading="">
-                        </li>
-
-                    </ul>
-
-                </div>
-
-                <button class="carousel-button carousel--button-right">
-                    <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/arrow-forward-circle_hegcmn.svg"
-                        alt="arrow forward button">
-                </button>
-
-            </div>
-
-            <div class="carousel-nav">
-                <button class="carousel-indicator current-slide"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-            </div>
 
         </div>
 
-        <div class="project-items-mobile-images">
+        <div class="carousel">
 
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904321/Projects/what%20was%20dead%20was%20never%20dead/mobile/1_sbcsb8.webp"
-                alt="what was dead was never dead images">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904322/Projects/what%20was%20dead%20was%20never%20dead/mobile/2_f5dit3.webp"
-                alt="what was dead was never dead images">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904321/Projects/what%20was%20dead%20was%20never%20dead/mobile/3_rfu4hc.webp"
-                alt="what was dead was never dead images">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904321/Projects/what%20was%20dead%20was%20never%20dead/mobile/4_jyl8sw.webp"
-                alt="what was dead was never dead images">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904321/Projects/what%20was%20dead%20was%20never%20dead/mobile/5_wn5rk5.webp"
-                alt="what was dead was never dead images">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904321/Projects/what%20was%20dead%20was%20never%20dead/mobile/6_caobne.webp"
-                alt="what was dead was never dead images">
+            <img src="https://res.cloudinary.com/dhvalxorx/image/upload/v1733495847/Neec%20-%20Nonso/Projects/5%20what%20was%20dead%20was%20never%20dead%2C%202021/1_pkmybk.webp"
+                alt="">
+            <img src="https://res.cloudinary.com/dhvalxorx/image/upload/v1733495849/Neec%20-%20Nonso/Projects/5%20what%20was%20dead%20was%20never%20dead%2C%202021/2_o07bvx.webp"
+                alt="">
+            <img src="https://res.cloudinary.com/dhvalxorx/image/upload/v1733495851/Neec%20-%20Nonso/Projects/5%20what%20was%20dead%20was%20never%20dead%2C%202021/3_amtxda.webp"
+                alt="">
 
         </div>
+
+
 
     </main>
 
