--- a/index.html
+++ b/index.html
@@ -55,21 +55,131 @@
     </script>
 
 
-
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/mobile.css">
 
 </head>
 
 <body>
 
+    <!-- Back to top button -->
+    <svg class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50" height="50" viewBox="0 0 512 512">
+        <path
+            d="M256 48C141.13 48 48 141.13 48 256s93.13 208 208 208 208-93.13 208-208S370.87 48 256 48zm91.36 296.85c-6.06 6.06-15.88 6.06-21.94 0L256 275.43l-69.42 69.42c-6.06 6.06-15.88 6.06-21.94 0-6.06-6.06-6.06-15.88 0-21.94l80.39-80.39c6.06-6.06 15.88-6.06 21.94 0l80.39 80.39c6.06 6.06 6.06 15.88 0 21.94z" />
+    </svg>
 
-    <div class="backgroundDiv">
+    <!--- Start of Navbar -->
+
+    <div class="header">
+
+        <nav class='navbar'>
+            <a class="logo-link" href='/'>
+                <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/neec-nonso-logo_l0wjup.png"
+                    class='logo-image' alt='logo' />
+            </a>
+
+            <ul class='nav-list'>
+
+                <li class='list-item'>
+                    <a href='bio'> bio</a>
+                </li>
+
+                <li class='list-item'>
+                    <a href='projects'>projects </a>
+                </li>
+                <li class='list-item'>
+                    <a href='augmented-reality'> augmented-reality </a>
+                </li>
+                <li class='list-item'>
+                    <a href='exhibition'>exhibitions </a>
+                </li>
+                <li class='list-item'>
+                    <a href='contact'>contact </a>
+                </li>
+
+            </ul>
+            <div class="menu">
+                <div class="menu-line1"></div>
+                <div class="menu-line2"></div>
+                <div class="menu-line3"></div>
+            </div>
+
+        </nav>
+
+        <div class='extra'>
+
+            <a rel='noreferrer noopener' target='_blank' href='https://www.instagram.com/neecnonso/'>
+                <img class="extra-icon-image"
+                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-instagram_wpuxle.svg"
+                    alt='extra-icon-image' />
+            </a>
+
+            <a rel='noreferrer noopener' target='_blank' href='https://web.facebook.com/neecnonso/'>
+                <img class="extra-icon-image"
+                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/logo-facebook_oh07ii.svg"
+                    alt='extra-icon-image' />
+            </a>
+
+
+
+            <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
+                <img class="extra-icon-image twitter"
+                    src="https://res.cloudinary.com/dhvalxorx/image/upload/v1735493760/Neec%20-%20Nonso/7740647_srug84.webp"
+                    alt='extra-icon-image' />
+            </a>
+
+
+        </div>
+
+    </div>
+
+    <main class="main-homepage">
+
+        <div class="homepage-images">
+
+            <section>
+            
+                <img class="homepage-image"
+                    src="https://res.cloudinary.com/dhvalxorx/image/upload/v1735495640/Neec%20-%20Nonso/homepage/1._eunice_onyedika_ikegbunem_Large_ozqgdr.webp"
+                    alt="">
+                <p> eunice onyedika ikegbunem</p>
+            </section>
+
+            <section>
+                <img class="homepage-image"
+                    src="https://res.cloudinary.com/dhvalxorx/image/upload/v1735495644/Neec%20-%20Nonso/homepage/2_commander-in-chief_of_the_cuntry_Large_i5u7yp.webp"
+                    alt="">
+                <p>commander-in-chief of the cuntry</p>
+            </section>
+
+            <section>
+                <img class="homepage-image"
+                    src="https://res.cloudinary.com/dhvalxorx/image/upload/v1735495636/Neec%20-%20Nonso/homepage/3_ekwensu_is_not_satani_Large_trpubo.webp"
+                    alt="">
+                <p>ekwensu is not satani</p>
+            </section>
+
+            <section>
+                <img class="homepage-image"
+                    src="https://res.cloudinary.com/dhvalxorx/image/upload/v1735495630/Neec%20-%20Nonso/homepage/4_profiling_Large_zmgvbd.webp"
+                    alt="">
+                <p>profiling</p>
+            </section>
+
+            <section>
+                <img class="homepage-image"
+                    src="https://res.cloudinary.com/dhvalxorx/image/upload/v1735495632/Neec%20-%20Nonso/homepage/5_fidelis_ezugwu_Large_wgzhtg.webp"
+                    alt="">
+                <p>fidelis ezugwu</p>
+            </section>
+
+        </div>
 
         <div class="vertical-center">
             <a class="home-btn" href="./projects">5555555555</a>
         </div>
-        
-    </div>
 
+    </main>
 
     <footer class="footer-container">
 
@@ -77,7 +187,14 @@
             reserved.</p>
     </footer>
 
-    <script src="index.js" async defer></script>
+
+    <script src="script.js" async defer></script>
+
+    <!-- Add GSAP and ScrollTrigger -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+
+
 </body>
 
 </html>
