--- a/projects/afamefuna.html
+++ b/projects/afamefuna.html
@@ -2,18 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> bio | neec nonso | visual artist</title>
+    <title> afamefuna | neec nonso | visual artist</title>
+
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/png"
         href="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/favicon_j4hvqa.png">
 
     <meta name="robots" content="index, follow">
-    <meta name="description"
-        content="neec nonso is a young, vibrant and self-taught visual artist who is making waves in the contemporary african art scene">
+    <meta name="description" content="neec nonso is a nigerian visual artist">
     <meta name="keywords"
         content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
 
@@ -23,7 +23,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:title" content="homepage | neec nonso | visual artist">
     <meta property="og:description" content="neec nonso is a nigerian visual artist">
-    <meta property="og:url" content="https://www.neecnonso.com/bio" />
+    <meta property="og:url" content="https://www.neecnonso.com/projects/afamefuna" />
     <meta property="og:image"
         content="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/ogimage_r9q3lw.png" />
 
@@ -37,15 +37,19 @@
     <meta name="twitter:image"
         content="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/ogimage_r9q3lw.png" />
 
+    <!-- Style Links 
 
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/mobile.css">
+    <link rel="stylesheet" href="minify.css"> 
+-->
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/mobile.css">
 
 </head>
 
 <body>
 
     <!-- Back to top button -->
+
     <svg class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50" height="50" viewBox="0 0 512 512">
         <path
             d="M256 48C141.13 48 48 141.13 48 256s93.13 208 208 208 208-93.13 208-208S370.87 48 256 48zm80 280l-80-80-80 80-16-16 96-96 96 96z" />
@@ -58,27 +62,27 @@
         <nav class='navbar'>
 
             <a class="logo-link" href='/'>
-                <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/neec-nonso-logo_l0wjup.png"
+                <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/ogimage_r9q3lw.png"
                     class='logo-image' alt='logo' />
             </a>
 
             <ul class='nav-list'>
 
                 <li class='list-item'>
-                    <a href='bio'> bio</a>
+                    <a href='../bio'> bio</a>
                 </li>
 
                 <li class='list-item'>
-                    <a href='projects'>projects </a>
+                    <a href='../projects'>projects </a>
                 </li>
                 <li class='list-item'>
-                    <a href='augmented-reality'> augmented-reality </a>
+                    <a href='../augmented-reality'> augmented-reality </a>
                 </li>
                 <li class='list-item'>
-                    <a href='exhibition'>exhibitions </a>
+                    <a href='../exhibition'>exhibitions </a>
                 </li>
                 <li class='list-item'>
-                    <a href='contact'>contact </a>
+                    <a href='../contact'>contact </a>
                 </li>
 
             </ul>
@@ -92,8 +96,6 @@
         </nav>
 
         <div class='extra'>
-
-          
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.instagram.com/neecnonso/'>
                 <img class="extra-icon-image"
@@ -122,84 +124,77 @@
 
     <!-- End of Navbar-->
 
-    <!-- Start of Main Page -->
+    <!-- Main -->
 
-    <div class='about-page'>
+    <main class="project-items-main">
 
-        <section class="bio-image-section">
+        <div class="project-items-words">
 
-            <picture>
-                <source media="(max-width: 500px)"
-                    srcset="https://res.cloudinary.com/dhvalxorx/image/upload/v1735496377/Neec%20-%20Nonso/bio/mobile_version_Large_iqqkhp.webp">
-                <img class="bio-image" loading="lazy"
-                    src="https://res.cloudinary.com/dhvalxorx/image/upload/v1735496380/Neec%20-%20Nonso/bio/profile_image_Large_mf17hg.webp"
-                    alt="neec nonso potrait">
-            </picture>
+            <h1 class="project-items-words-title">afamefuna</h1>
 
+            <p class="project-items-words-paragraph">
 
-        </section>
-
-        <section class="biography-section">
-
-            <h1 class="biography-title">bio.</h1>
-
-            <p class='biography'>
-
-                neec nonso is a multidisciplinary artist whose practice traverses photography, performance, and
-                augmented reality, often
-                diving into morbid themes, memories of the dead, and the haunting realms of myth and urban legend. his
-                work confronts
-                the complexities of mortality, cultural rituals, and the unsettling beauty of everyday life in nigeria.
-                by blending
-                documentary realism with staged compositions, nonso crafts visceral, emotionally charged narratives that
-                provoke deep
-                reflection on identity, tradition, and the darker undercurrents of human existence.
+                my name, before i changed it to neec nonso, is chukwunonso chukwuemeka. it means ‘'god is near me'’ and
+                ‘'god has done
+                something great'’ respectively. it is what my people would consider a good name, but i made the change.
+                the reason for
+                the change lies in its association with the christian god my clergy parent instilled in me, rather than
+                reflecting my
+                own identity.
             </p>
 
-            <p class='biography'>
-
-                recently, his practice has expanded into politically motivated narratives, most notably with heads of
-                state—a searing
-                critique of power, corruption, and failed leadership across africa. blending documentary realism with
-                crafted
-                compositions, he incorporates hundreds of thousands of hand-dotted holes on prints to symbolize windows
-                into the unknown
-                or hidden aspects of his characters, inviting viewers to question what lies beneath the surface.
+            <p class="project-items-words-paragraph">
+                in the language of photography, i embark on a voyage into the world
+                of names. through my eight-piece project, i uncover
+                the rich layers of meaning, emotion, and culture hidden within the simple act of naming. these visual
+                stories invite you
+                to an emotional journey where names aren't just words; they're vessels filled with feelings and
+                memories. through my
+                photography, names become carriers of history and culture, shaping how we see the world. each image is
+                like a universe,
+                ensuring that the essence of a name, like "afamefuna" (my name will not be lost), remains unblemished by
+                translation,
+                misunderstanding, or misjudgment.
             </p>
 
-            <p class='biography'>
-
-                neec was shortlisted for the vantage point sharjah photography prize and the art x lagos award. his work
-                continued to
-                gain attention in 2023, when he was a finalist for the contemporary african photography [cap] prize and
-                was selected for
-                the prince claus mentorship programme. in 2024, he again made the finalist list for the cap prize. a
-                member of 1884
-                photo, a collective of visual artists documenting african narratives, nonso's work fosters meaningful
-                conversations
-                around identity, culture, and the shared human experience.
-                <br>
-
+            <p class="project-items-words-paragraph">
+                christianity's misinterpretations of "ekwensu" and "esu" as "satan" have obscured the true brilliance of
+                these deities
+                in igbo and yoruba traditions. this project reveals the depths of misunderstanding that have concealed
+                these names.
+                their true meanings, distinct from the christian portrayal of satan.
 
             </p>
 
-            <p>neec nonso is neec nonso.</p>
+        </div>
 
-            <span>for a chronological list of exhibition neec has participated in, see <a class="link-to-exhibitions"
-                    href="./exhibition">here.</a>
-            </span>
+        <div class="carousel">
 
-        </section>
+            <img src="https://res.cloudinary.com/dhvalxorx/image/upload/v1733495510/Neec%20-%20Nonso/Projects/3%20afamefuna%202023/the_empty_space_in_the_head_is_very_vast_qxdubw.webp"
+                alt="">
 
-    </div>
+            <img src="https://res.cloudinary.com/dhvalxorx/image/upload/v1733495509/Neec%20-%20Nonso/Projects/3%20afamefuna%202023/after_god_is_dibia_abvg6d.webp"
+                alt="">
 
-    <!-- End of Main Page -->
+            <img src="https://res.cloudinary.com/dhvalxorx/image/upload/v1733495509/Neec%20-%20Nonso/Projects/3%20afamefuna%202023/ekwensu_is_not_satani_bj8ukw.webp"
+                alt="">
+
+
+
+        </div>
+
+    </main>
+
+    <!-- End of Main -->
 
     <!-- Start of Footer -->
 
     <footer class="footer-container">
+
         <p class="copyright"> &copy; 2022 |<span class="copyright-name"><a href="/">neec nonso</a></span> | all rights
-            reserved.</p>
+            reserved.
+        </p>
+
     </footer>
 
     <!-- End of Footer -->
@@ -207,7 +202,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
 
-    <script src="script.js" async defer></script>
+
+    <script src="../script.js" async defer></script>
+    <script src="../scripts/projects.js" async defer></script>
 
 </body>
 
