--- a/projects/intheinin.html
+++ b/projects/intheinin.html
@@ -2,18 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> bio | neec nonso | visual artist</title>
+    <title> in the in in | neec nonso | visual artist</title>
+
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/png"
         href="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/favicon_j4hvqa.png">
 
     <meta name="robots" content="index, follow">
-    <meta name="description"
-        content="neec nonso is a young, vibrant and self-taught visual artist who is making waves in the contemporary african art scene">
+    <meta name="description" content="neec nonso is a nigerian visual artist">
     <meta name="keywords"
         content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
 
@@ -23,7 +23,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:title" content="homepage | neec nonso | visual artist">
     <meta property="og:description" content="neec nonso is a nigerian visual artist">
-    <meta property="og:url" content="https://www.neecnonso.com/bio" />
+    <meta property="og:url" content="https://www.neecnonso.com/projects/in-the-in-in" />
     <meta property="og:image"
         content="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/ogimage_r9q3lw.png" />
 
@@ -37,15 +37,19 @@
     <meta name="twitter:image"
         content="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/ogimage_r9q3lw.png" />
 
+    <!-- Style Links 
 
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/mobile.css">
+    <link rel="stylesheet" href="minify.css"> 
+-->
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/mobile.css">
 
 </head>
 
 <body>
 
     <!-- Back to top button -->
+
     <svg class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50" height="50" viewBox="0 0 512 512">
         <path
             d="M256 48C141.13 48 48 141.13 48 256s93.13 208 208 208 208-93.13 208-208S370.87 48 256 48zm80 280l-80-80-80 80-16-16 96-96 96 96z" />
@@ -58,27 +62,27 @@
         <nav class='navbar'>
 
             <a class="logo-link" href='/'>
-                <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/neec-nonso-logo_l0wjup.png"
+                <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/ogimage_r9q3lw.png"
                     class='logo-image' alt='logo' />
             </a>
 
             <ul class='nav-list'>
 
                 <li class='list-item'>
-                    <a href='bio'> bio</a>
+                    <a href='../bio'> bio</a>
                 </li>
 
                 <li class='list-item'>
-                    <a href='projects'>projects </a>
+                    <a href='../projects'>projects </a>
                 </li>
                 <li class='list-item'>
-                    <a href='augmented-reality'> augmented-reality </a>
+                    <a href='../augmented-reality'> augmented-reality </a>
                 </li>
                 <li class='list-item'>
-                    <a href='exhibition'>exhibitions </a>
+                    <a href='../exhibition'>exhibitions </a>
                 </li>
                 <li class='list-item'>
-                    <a href='contact'>contact </a>
+                    <a href='../contact'>contact </a>
                 </li>
 
             </ul>
@@ -92,8 +96,6 @@
         </nav>
 
         <div class='extra'>
-
-          
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.instagram.com/neecnonso/'>
                 <img class="extra-icon-image"
@@ -122,84 +124,77 @@
 
     <!-- End of Navbar-->
 
-    <!-- Start of Main Page -->
+    <!-- Main -->
 
-    <div class='about-page'>
+    <main class="project-items-main">
 
-        <section class="bio-image-section">
+        <div class="project-items-words">
 
-            <picture>
-                <source media="(max-width: 500px)"
-                    srcset="https://res.cloudinary.com/dhvalxorx/image/upload/v1735496377/Neec%20-%20Nonso/bio/mobile_version_Large_iqqkhp.webp">
-                <img class="bio-image" loading="lazy"
-                    src="https://res.cloudinary.com/dhvalxorx/image/upload/v1735496380/Neec%20-%20Nonso/bio/profile_image_Large_mf17hg.webp"
-                    alt="neec nonso potrait">
-            </picture>
+            <h1 class="project-items-words-title">in the in in</h1>
 
+            <p class="project-items-words-paragraph">
 
-        </section>
-
-        <section class="biography-section">
-
-            <h1 class="biography-title">bio.</h1>
-
-            <p class='biography'>
-
-                neec nonso is a multidisciplinary artist whose practice traverses photography, performance, and
-                augmented reality, often
-                diving into morbid themes, memories of the dead, and the haunting realms of myth and urban legend. his
-                work confronts
-                the complexities of mortality, cultural rituals, and the unsettling beauty of everyday life in nigeria.
-                by blending
-                documentary realism with staged compositions, nonso crafts visceral, emotionally charged narratives that
-                provoke deep
-                reflection on identity, tradition, and the darker undercurrents of human existence.
-            </p>
-
-            <p class='biography'>
-
-                recently, his practice has expanded into politically motivated narratives, most notably with heads of
-                state—a searing
-                critique of power, corruption, and failed leadership across africa. blending documentary realism with
-                crafted
-                compositions, he incorporates hundreds of thousands of hand-dotted holes on prints to symbolize windows
-                into the unknown
-                or hidden aspects of his characters, inviting viewers to question what lies beneath the surface.
-            </p>
-
-            <p class='biography'>
-
-                neec was shortlisted for the vantage point sharjah photography prize and the art x lagos award. his work
-                continued to
-                gain attention in 2023, when he was a finalist for the contemporary african photography [cap] prize and
-                was selected for
-                the prince claus mentorship programme. in 2024, he again made the finalist list for the cap prize. a
-                member of 1884
-                photo, a collective of visual artists documenting african narratives, nonso's work fosters meaningful
-                conversations
-                around identity, culture, and the shared human experience.
-                <br>
-
+                this work is an unflinching meditation on the black body as a vessel of pain, resilience, and survival.
+                with a dremel
+                tool and a precision blade, i carved into these photographs, creating scars that speak to the silent
+                histories we carry.
+                the marks are deliberate—symbols, holes, and fragments of text that reveal the unspoken truths of what
+                it means to
+                endure.
 
             </p>
 
-            <p>neec nonso is neec nonso.</p>
+            <p class="project-items-words-paragraph">
+                black skin is both a shield and a target, bearing the weight of centuries yet refusing to crumble. each
+                line etched into
+                these images mimics the wounds that life leaves behind, but also the healing that follows. it is a
+                paradox—how blackness
+                can hold so much hurt and still radiate strength, how it can be scarred and yet remain unbroken.
+            </p>
 
-            <span>for a chronological list of exhibition neec has participated in, see <a class="link-to-exhibitions"
-                    href="./exhibition">here.</a>
-            </span>
+            <p class="project-items-words-paragraph">
+                and thank god, we don’t look like what we’ve been through.
+            </p>
 
-        </section>
+            <p class="project-items-words-paragraph">
+                there’s a quiet power in these works, a reminder that survival is not just about enduring but about
+                transforming. to
+                live is to scar, and to scar is to remember. yet, in spite of it all, we are more than what we’ve been
+                through. we are
+                beauty forged in pain, stories written in flesh, and monuments to our own perseverance.
+            </p>
 
-    </div>
+            <p class="project-items-words-paragraph">
+                in the in in is my way of speaking through the silence, of honoring the scars that shape us and the
+                courage it takes to
+                keep going. it is not just a statement—it is a reckoning, a reclamation, and an offering.
+            </p>
 
-    <!-- End of Main Page -->
+        </div>
+
+        <div class="carousel">
+
+            <img src="https://res.cloudinary.com/dhvalxorx/image/upload/v1733494952/Neec%20-%20Nonso/Projects/2b%20in%20the%20in%20in/1_vfdfsw.webp"
+                alt="">
+            <img src="https://res.cloudinary.com/dhvalxorx/image/upload/v1733494952/Neec%20-%20Nonso/Projects/2b%20in%20the%20in%20in/2_xufgsd.webp"
+                alt="">
+            <img src="https://res.cloudinary.com/dhvalxorx/image/upload/v1733494952/Neec%20-%20Nonso/Projects/2b%20in%20the%20in%20in/3_f3tqll.webp"
+                alt="">
+
+        </div>
+
+    </main>
+
+    <!-- End of Main -->
 
     <!-- Start of Footer -->
 
     <footer class="footer-container">
+
         <p class="copyright"> &copy; 2022 |<span class="copyright-name"><a href="/">neec nonso</a></span> | all rights
-            reserved.</p>
+            reserved.
+        </p>
+
     </footer>
 
     <!-- End of Footer -->
@@ -207,7 +202,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
 
-    <script src="script.js" async defer></script>
+
+    <script src="../script.js" async defer></script>
+    <script src="../scripts/projects.js" async defer></script>
 
 </body>
 
