--- a/projects/pain-a-discomfort-or-a-trigger.html
+++ b/projects/pain-a-discomfort-or-a-trigger.html
@@ -47,9 +47,10 @@
 
 <body>
     <!-- Back to top button -->
-    <img class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50px"
-        src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/chevron-up-circle-outline_jfaz33.svg"
-        alt="back to top icon">
+    <svg class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50" height="50" viewBox="0 0 512 512">
+        <path
+            d="M256 48C141.13 48 48 141.13 48 256s93.13 208 208 208 208-93.13 208-208S370.87 48 256 48zm80 280l-80-80-80 80-16-16 96-96 96 96z" />
+    </svg>
 
     <!--- Start of Navbar -->
 
@@ -108,8 +109,8 @@
 
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
-                <img class="extra-icon-image"
-                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669879857/icons/logo-twitter_bzblkx.svg"
+                <img class="extra-icon-image twitter"
+                    src="https://res.cloudinary.com/dhvalxorx/image/upload/v1735493760/Neec%20-%20Nonso/7740647_srug84.webp"
                     alt='extra-icon-image' />
             </a>
 
@@ -164,113 +165,11 @@
 
         </div>
 
-        <div class="main-exhibition">
+        <div class="carousel">
 
-            <div class="carousel potrait">
-
-                <button class="carousel-button carousel--button-left is-hidden">
-                    <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/arrow-back-circle_ag2kln.svg"
-                        alt="arrow-back-circle">
-                </button>
-
-                <div class="carousel-track-container">
-
-                    <ul class="carousel-track">
-
-                        <li class="carousel-slide current-slide"><img class="carousel-image potrait"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896743/Projects/pain%20a%20discomfort/1_xrtiek.webp"
-                                alt="pain-a-discomfort-or-a-trigger-1"></li>
-                        <li class="carousel-slide "><img class="carousel-image potrait"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896743/Projects/pain%20a%20discomfort/2_fm8ogd.webp"
-                                alt="pain-a-discomfort-or-a-trigger-2"></li>
-                        <li class="carousel-slide "><img class="carousel-image potrait"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896743/Projects/pain%20a%20discomfort/3_ypm0kn.webp"
-                                alt="pain-a-discomfort-or-a-trigger-3"></li>
-                        <li class="carousel-slide "><img class="carousel-image potrait"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896743/Projects/pain%20a%20discomfort/4_wlax9x.webp"
-                                alt="pain-a-discomfort-or-a-trigger-4"></li>
-                        <li class="carousel-slide "><img class="carousel-image potrait"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896743/Projects/pain%20a%20discomfort/5_ro7lki.webp"
-                                alt="pain-a-discomfort-or-a-trigger-5"></li>
-                        <li class="carousel-slide "><img class="carousel-image potrait"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896743/Projects/pain%20a%20discomfort/6_jzxnoo.webp"
-                                alt="pain-a-discomfort-or-a-trigger-6"></li>
-                        <li class="carousel-slide "><img class="carousel-image potrait"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896744/Projects/pain%20a%20discomfort/7_dlpg5q.webp"
-                                alt="pain-a-discomfort-or-a-trigger-7"></li>
-                        <li class="carousel-slide "><img class="carousel-image potrait"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896744/Projects/pain%20a%20discomfort/8_ub0mmx.webp"
-                                alt="pain-a-discomfort-or-a-trigger-8"></li>
-                        <li class="carousel-slide "><img class="carousel-image potrait"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896744/Projects/pain%20a%20discomfort/9_au7mhu.webp"
-                                alt="pain-a-discomfort-or-a-trigger-9"></li>
-                        <li class="carousel-slide "><img class="carousel-image potrait"
-                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896744/Projects/pain%20a%20discomfort/10_v35lz4.webp"
-                                alt="pain-a-discomfort-or-a-trigger-10"></li>
-
-
-
-                    </ul>
-
-                </div>
-
-                <button class="carousel-button carousel--button-right">
-                    <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/arrow-forward-circle_hegcmn.svg"
-                        alt="arrow-forward-circle">
-                </button>
-
-            </div>
-
-            <div class="carousel-nav">
-                <button class="carousel-indicator current-slide"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-
-
-            </div>
 
         </div>
 
-        <div class="project-items-mobile-images">
-
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896756/Projects/pain%20a%20discomfort/mobile/1_x7kmog.webp"
-                alt="pain-a-discomfort-or-a-trigger-mobile">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896756/Projects/pain%20a%20discomfort/mobile/2_x66uih.webp"
-                alt="pain-a-discomfort-or-a-trigger-mobile">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896756/Projects/pain%20a%20discomfort/mobile/3_tjjjd2.webp"
-                alt="pain-a-discomfort-or-a-trigger-mobile">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896756/Projects/pain%20a%20discomfort/mobile/4_uvd38b.webp"
-                alt="pain-a-discomfort-or-a-trigger-mobile">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896756/Projects/pain%20a%20discomfort/mobile/5_oz57qq.webp"
-                alt="pain-a-discomfort-or-a-trigger-mobile">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896756/Projects/pain%20a%20discomfort/mobile/6_e2b4mq.webp"
-                alt="pain-a-discomfort-or-a-trigger-mobile">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896757/Projects/pain%20a%20discomfort/mobile/7_f3leyp.webp"
-                alt="pain-a-discomfort-or-a-trigger-mobile">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896757/Projects/pain%20a%20discomfort/mobile/8_idr6gp.webp"
-                alt="pain-a-discomfort-or-a-trigger-mobile">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896757/Projects/pain%20a%20discomfort/mobile/9_wizhgs.webp"
-                alt="pain-a-discomfort-or-a-trigger-mobile">
-            <img class="mobile-images"
-                src="https://res.cloudinary.com/da93q413z/image/upload/v1669896757/Projects/pain%20a%20discomfort/mobile/10_ywau0t.webp"
-                alt="pain-a-discomfort-or-a-trigger-mobile">
-        </div>
 
     </main>
 
